--- a/nutrition/chapter19.tex
+++ b/nutrition/chapter19.tex
@@ -1,145 +1,150 @@
-Правіла 19. Вугляводы
+\chapter{Вугляводы}
 
 Вугляводы ўяўляюць сабой разнастайную групу, у якой прысутнічаюць як карысныя, так і шкодныя прадукты. Розныя дыеты могуць мець розную долю вугляводаў, ад 85% да вельмі нізкіх значэньняў. Парушэньні вугляводнага абмену ляжаць у аснове шматлікіх захворваньняў, таму правільны харчовы выбар зьяўляецца добрай прафіляктыкай.
+
 Многія людзі ў наш час дэманізуюць вугляводы, абвінавачваючы іх ва ўсіх бедах і пазьбягаючы любой цаной. Часта можна пачуць забаўныя гісторыі, як кавалачак хлеба сапсаваў камусьці ня толькі фігуру, але і жыцьцё. Але насамрэч вугляводныя прадукты – гэта вельмі разнастайная харчовая група, таму трэба навучыцца абыходзіцца зь імі выбіральна. Асобнай увагі заслугоўвае і пытаньне цукру.
 
-Як зьявілася праблема?
+\section{Як зьявілася праблема?}
 
 Праблема ўжываньня цукру бярэ свой пачатак у нашай эвалюцыі, мільёны гадоў таму. Навукоўцы выявілі, што падчас аднаго глябальнага пахаладаньня ў нас у клетках адбылася мутацыя, якая паспрыяла павелічэньню ўзроўню мачавой кіслаты пры спажываньні садавіны, запаволеньню яе вывядзеньня. У норме мачавая кіслата ўтвараецца пры мэтабалізьме фруктозы, а яе больш высокія ўзроўні зьмяншаюць адчувальнасьць да інсуліну і спрыяюць набору вагі.
+
 У прыродзе колькасьць цукру зьвязаная з паравінамі году і павялічваецца восеньню, за якой ідзе зіма. Таму здольнасьць набіраць больш тлушчу ад фруктозы дапамагала нашым продкам выжыць. З гэтым жа зьвязаны й факт, што фруктоза адключае сытасьць і павялічвае апэтыт, бо для выжываньня трэба набраць як мага больш тлушчу. Такім чынам, раней гэта была карысная ўласьцівасьць арганізму, а цяпер фруктоза болей нам шкодзіць, бо лішак тлушчу і падвышаны апэтыт толькі павялічваюць хваробы і зьмяншаюць працягласьць жыцьця. Шкаднейшая за ўсё фруктоза пры пераяданьні.
 
 Нашаму арганізму эвалюцыйна карысьнейшыя «клеткавыя» вугляводы, прадстаўленыя клубнямі, лісьцем, гароднінай і садавіной. «Клеткавыя» вугляводы знаходзяцца ў жывых клетках і пры трапленьні ў арганізм павольна руйнуюцца.
 
 Што да крухмалаў, то яшчэ дзесяць тысячаў гадоў таму людзі пачалі генэтычна прыстасоўвацца да яго спажываньня. Так, ёсьць ген AMY1, які кадуе фэрмэнт альфа-амілазу, што расшчапляе крухмал. Дык вось тыя народы, якія здаўна займаюцца сельскай гаспадаркай, маюць больш копіяў гену (аж да 20), а іншыя – усяго некалькі. Чым менш копіяў гена, тым вышэйшая рызыка атлусьценьня. Таму тыя народы, што даўно вырошчваюць крухмалістыя прадукты, лягчэй іх і пераносяць.
 
-Рафінаваньне прадуктаў.
+\subsection{Рафінаваньне прадуктаў.}
 У разьдзеле пра ўдзельную шчыльнасьць калёрыяў мы ўжо згадвалі, што спажываньне вялікай колькасьці вугляводаў у выглядзе цэльнай гародніны, садавіны і зеляніны карыснае для здароўя, а вось вычышчаныя мучныя вырабы аказваюць нэгатыўны ўплыў. Нашаму арганізму эвалюцыйна карысьнейшыя "клеткавыя" вугляводы, прадстаўленыя клубнямі, лісьцем, гароднінай і садавіной. "Клеткавыя" вугляводы знаходзяцца ў жывых клетках і пры трапленьні ў арганізм павольна руйнуюцца і вызваляюцца.
 
 Сёньня мы ямо занадта шмат «няклеткавых», ці «сучасных» вугляводаў, якія атрымліваюцца з мэханічна і тэрмічна апрацаванай збажыны, бабовых і інш. Такія вугляводы расшчапляюцца значна хутчэй і ствараюць больш высокую канцэнтрацыю як у ротавай поласьці, так і ў кішачніку. Яны пагаршаюць кішачную мікрафлёру, спрыяюць больш выяўленаму запаленчаму адказу арганізму, моцна нагружаюць сыстэму рэгуляцыі вугляводнага абмену, зьмяншаюць адчувальнасьць да інсуліну. Цяпер людзі ядуць усё менш цэльнай расьліннай ежы і ўсё больш перапрацаванай у выглядзе вытворных мукі, соевага парашку, высушанага бульбянога крухмалу. Такія прадукты нашмат шкаднейшыя, чым цэльныя расьлінныя. Што да іншых аспэктаў, дык важна зьвярнуць увагу, што вугляводы лепш засвойваюцца на тле больш высокага ўтрыманьня вітаміну D, як гэта бывае ўлетку.
 
-Фітанутрыенты і харчовыя валокны.
+\subsection{Фітанутрыенты і харчовыя валокны.}
 Важны ўплыў аказвае на наша здароўе і недахоп розных фітанутрыентаў. Нізкакрухмалістая расьлінная ежа багатая рознымі злучэньнямі з шырокім профілем біялягічнай актыўнасьці, вітамінамі, антыаксыдантамі. Многія з гэтых рэчываў зьяўляюцца сэналітыкамі (забіваюць старыя клеткі) і герапратэктарамі (запавольваюць старэньне).
+
 Шмат у такой ежы яшчэ і рознай клятчаткі, як нераспушчальнай (лігнаны), так і распушчальнай (пэктыны і г. д.). Разнастайнасьць харчовых валокнаў важняа для падтрыманьня мікрафлёры кішачніка, бо здаровае харчаваньне – гэта неад'емная частка здаровага страваваньня. У рафінаванай вугляводнай ежы гэтых кампанэнтаў мала, а вось у цэльнай гародніне, садавіне і зеляніне іх утрымліваецца дастаткова.
 
-Як гэта ўплывае на здароўе?
+\section{Як гэта ўплывае на здароўе?}
 
-Цукар.
+\subsection{Цукар.}
 Залішняе спажываньне цукру зьвязанае з прыкметным павелічэньнем рызыкі шматлікіх захворваньняў. Малекула цукрозы складаецца з глюкозы і фруктозы. Лішак фруктозы ў спалучэньні з падвышаным спажываньнем калёрыяў шкодзіць як наўпрост, так і ўскосна, павялічваючы імавернасьць атлусьценьня. Лішак цукру павялічвае рызыку інсулінарэзыстэнтнасьці, мэтабалічнага сындрому, цукровага дыябэту другога тыпу, карыесу, тлушчавай дыстрафіі печані, парушае ліпідны профіль крыві і паскарае атэрасклероз. Таксама ён адмоўна ўплывае на работу мозгу, зьніжае ўтварэньне новых нэўронаў, павялічвае трывогу, рызыку дэпрэсіі і павышае рызыку хваробы Альцгеймэра. Лічыцца, што ня менш за траціну выпадкаў сындрому раздражнёнага кішачніка зьвязана з залішнім спажываньнем цукру.
 
 Ускосная шкода ў тым, што цукар можа фармаваць харчовую залежнасьць, павялічваючы ўзровень дафаміну і спрыяючы пераяданьню. Фруктоза нэгатыўна ўплывае на нашыя харчовыя паводзіны, павышаючы ўзровень грэліну і зьніжаючы адчувальнасьць да лептыну. Такое яе дзеяньне вядзе да набору масы цела. У тых людзей, хто атрымлівае 25% калёрыяў з цукру, рызыка сардэчна-сасудзістых захворваньняў удвая вышэйшая, чым у тых, хто атрымлівае зь яго менш за 10% калёрыяў. А вось ужываньне больш за адну порцыю салодкага напою ў дзень прыводзіць таксама да двухразовай рызыкі цукровага дыябэту. Ва ўсіх выпадках гаворка ідзе пра дададзены цукар і ў соках. Адмова ад цукру станоўча ўплывае на стан здароўя нават бязь зьмены вагі.
 
 Надмер цукру ў рацыёне адмоўна ўплывае на работу мозгу, зьмяншае ўтварэньне новых нэўронаў, павялічвае трывогу, рызыку дэпрэсіі і хваробы Альцгеймэра.
 
-Лішак канцэнтраваных вугляводаў.
+\subsection{Лішак канцэнтраваных вугляводаў.}
 Як паказваюць дасьледаваньні, важнае значэньне мае ня проста лішак вугляводаў, а лішак перапрацаваных вугляводаў з высокай шчыльнасьцю, якія моцна ўплываюць на ўзровень глюкозы ў крыві (вымяраецца глікемічным індэксам), інсуліну (інсулінавы індэкс), маюць высокую глікемічную нагрузку. Звычайна ў такіх выпадках гаворка ідзе ня проста пра расьлінныя прадукты, а пра моцна перапрацаваныя.
 
 Частае ўжываньне вугляводаў, асабліва ў вялікіх порцыях, перапрацаваных, суправаджаецца падвышаным выдзяленьнем інсуліну. У цэлым, чым ніжэйшы ўзровень інсуліну і вышэйшая да яго адчувальнасьць, тым павольнейшае старэньне і лепшы стан здароўя. Інсулінарэзыстэнтнасьць нават без атлусьценьня зьвязаная з падвышанай рызыкай раку, гіпэртэнзіі ды іншых захворваньняў. Лішак вугляводаў з высокім глікемічным індэксам зьвязаны з больш высокім узроўнем запаленьня і дэпрэсіі. Дасьледаваньні паказваюць, што найбольш высокае ўжываньне такіх вугляводаў на 30% павышае рызыку сьмяротнасьці ў параўнаньні з самым нізкім.
 
 Фітанутрыенты (фітахімічныя рэчывы) – гэта шматлікія біялягічна актыўныя спалучэньні, якія не зьяўляюцца незаменнымі для чалавека, аднак маюць станоўчы ўплыў на здароўе, зьніжаюць рызыку многіх хранічных захворваньняў (сардэчна-сасудзістых, мэтабалічных, анкалягічных і да т.п.). Гэтыя спалучэньні знаходзяцца пераважна ў расьлінах, якія выпрацоўваюць іх як для абароны ад акісьленьня, шкоднікаў, так і для забесьпячэньня колеру, смаку і водару. У сьвеце вядома больш за трыццаць тысячаў такіх рэчываў. У цэльнай расьліннай ежы іх шмат, а вось у рафінаванай – вельмі мала. У порцыі гародніны можа быць да сотні розных фітанутрыентаў!
 
-Асноўныя прынцыпы
+\section{Асноўныя прынцыпы}
 
-Зьмяншайце колькасьць цукру.
+\subsection{Зьмяншайце колькасьць цукру.}
 Нормай дададзенага цукру зьяўляецца лічба ў 5% ад агульнай колькасьці калёрыяў, што складае каля 25 грамаў, або 6 лыжак цукру, якія цалкам могуць утрымоўвацца ў выглядзе ўтоенага цукру ў хлебе, соўсе ці паўфабрыкатах. Абмяжуйце дададзены цукар – і вы можаце прыкметна скараціць рызыкі для здароўя. Зьвярніце ўвагу, што як цукар, так і фруктоза біяэквівалентныя, то-бок цукар зь мёду ці соку дзейнічае на арганізм сапраўды гэтак жа, як і звычайны цукар. Таму важна сачыць і за агульнай колькасьцю цукру на дзень з розных крыніц! Цукар хаваецца за рознымі назвамі: глюкозна-фруктозны сыроп, «сыроп фруктозы», ГФС, HFCS, GFS, фінікавы цукар, цукроза, карычневы цукар, какосавы цукар, цукровы трысьнёг, кукурузны цукар, агава, мёд, дошаб, пэкмэз, фруктовы канцэнтрат, кляновы сыроп, цукар-сырэц, сыроп сушанага трысьнягу, інвэртны цукар, сыроп карычневага рысу, сок белага вінаграду і многімі іншымі. Акрамя гэтага, важна ўлічваць і агульную колькасьць фруктозы ў рацыёне, аптымальна заставацца ў межах 20-30 грамаў на содні, пры спажываньні больш за 60 грамаў павялічваюцца рызыкі для здароўя.
 
-Замяніце «перапрацаваныя» вугляводы «клетачнымі».
+\subsection{Замяніце «перапрацаваныя» вугляводы «клетачнымі».}
 Ёсьць розныя сыстэмы ацэнкі вугляводаў, якія грунтуюцца на глікемічным індэксе, інсулінавым індэксе, шчыльнасьці вугляводаў, глікемічнай нагрузцы. Камбінаваны паказьнік, які сумяшчае як шчыльнасьць вугляводаў, так і іх глікемічны індэкс, – гэта глікемічная нагрузка. Для яе вылічэньня трэба памножыць колькасьць грамаў вугляводаў у 100 грамах прадукту на яго глікемічны індэкс і падзяліць на 100. У цэлым важна разумець, што, нават калі глікемічны індэкс можа быць высокім, але вугляводаў у прадукце мала, ён ня шкодны для здароўя (бо глікемічная нагрузка будзе нізкай), як у выпадку з гарбузом або кавуном.
 
 Цукар хаваецца за рознымі назвамі: глюкозна-фруктозны сыроп, «сыроп фруктозы», ГФС, HFCS, GFS, фінікавы цукар, цукроза, карычневы цукар, какосавы цукар, цукровы трысьнёг, кукурузны цукар, агава, мёд, дошаб, пэкмэз, фруктовы канцэнтрат, кляновы сыроп, цукар-сырэц, сыроп сушанага трысьнягу, інвэртны цукар, сыроп карычневага рысу, сок белага вінаграду і многімі іншымі.
 
 Практычна гэтыя парады зводзяцца да адной: скарачайце ўжываньне мучных вырабаў, хлеба, выпечкі і паўфабрыкатаў на аснове мукі любых тыпаў. Па магчымасьці важна скараціць і колькасьць крупаў у рацыёне, робячы іх порцыі меншымі і дадаючы да іх больш нізкакалярыйнай зеляніны. Перапрацоўка крупаў робіць са здаровых прадуктаў ня вельмі здаровыя. Так, з аўсянкі з глікемічным індэксам 40-45 можна атрымаць кашу хуткага прыгатаваньня з індэксам 80. У любым выпадку ўсе крупы маюць досыць высокую шчыльнасьць вугляводаў. А вось долю гародніны неабходна павялічваць.
+
 Ёсьць гародніна зь вялікім утрыманьнем крухмалу (бульба, гарбуз, батат, морква, буракі і да т.п.) і меншым утрыманьнем (капусты, цыбуля, салаты, перац, спаржа, струковая фасоля і да т.п.), вы можаце ў розных відах і спалучэньнях выкарыстоўваць іх у сваім рацыёне.
 
-Прапорцыі і варыяцыі.
+\subsection{Прапорцыі і варыяцыі.}
 Вар'іруйце колькасьць вугляводаў. Калі вугляводы складаюць вельмі вялікую частку каляражу ў вашым харчаваньні, то будзе карысным яе паменшыць, замяніўшы вугляводы тлушчамі. Больш вугляводаў можна дадаць улетку, пры інтэнсіўнай фізычнай актыўнасьці, па-за стрэсам. Менш вугляводаў – узімку, пры сядзячай працы, нізкаінтэнсіўнай дзейнасьці, пры стрэсе. Чым менш вы рухаецеся, тым меншая доля вугляводаў павінна быць у вашай дыеце. Аднак многія дасьледаваньні паказваюць, што больш здаровымі ў доўгатэрміновай пэрспэктыве зьяўляюцца дыеты, дзе вугляводы складаюцца каля 50% калярыйнасьці і забясьпечваюцца гароднінай, садавіной, цэльназерневымі прадуктамі.
 
 Існуе каляровае правіла для вугляводаў: для пахудзеньня ўжывайце больш «зялёных» і «жоўта-чырвоных» вугляводаў нізкай і сярэдняй шчыльнасьці і менш «карычневых» вугляводаў (крупы, буры рыс), максімальна абмяжоўвайце долю «белых» вугляводаў (белы рыс, мучныя вырабы і г. д.).
 
 Дзеля простасьці складаньня прапорцый вы можаце выкарыстоўваць каляровае правіла для вугляводаў: для пахуданьня выкарыстоўвайце вялікую долю «зялёных» вугляводаў, то-бок вугляводаў нізкай шчыльнасьці, і «жоўта-чырвоных» вугляводаў (сярэдняй шчыльнасьці), меншую долю так званых «карычневых» вугляводаў ( крупы, буры рыс), максімальна абмяжоўвайце долю «белых» вугляводаў (белы рыс, мучныя вырабы і да т.п.).
 
-Разнастайнасьць расьліннай ежы.
+\subsection{Разнастайнасьць расьліннай ежы.}
 Чым больш разнастайнай ежы вы ясьцё, тым больш атрымліваеце розных фітанутрыентаў, многія зь якіх (капсаіцын, квэрцэтын, фэтызін, куркумін, бэрбэрын і г. д.) маюць добра вывучанае карыснае ўзьдзеяньне на арганізм. Як мінімум імкніцеся зьядаць 500 грамаў зеляніны, гародніны і садавіны ў дзень, большую частку зь іх сырымі або зь мінімальнай апрацоўкай. Бо чым больш вы варыце ці тушыце расьлінную ежу, тым вышэйшы ў яе глікемічны індэкс! Ідэі, як разнастаіць выбар, ёсьць у разьдзеле «Разнастайнасьць». Зьвярніце ўвагу, што БАДы, якія зьмяшчаюць асобныя фітанутрыенты, могуць быць далёка не такімі карыснымі, як цэльная гародніна, і мусяць выкарыстоўвацца толькі ў абмежаваных выпадках па прызначэньні.
 
-Як трымацца правіла? Ідэі і парады
+\section{Як трымацца правіла? Ідэі і парады}
 
-Утоены цукар.
+\subsection{Утоены цукар.}
 Прааналізуйце сьпіс прадуктаў, якія вы ўжываеце, і зьвярніце ўвагу на ўтоены цукар, які можа знаходзіцца ў зусім несалодкіх прадуктах: соўсы, хлеб, мясныя паўфабрыкаты і г.д.
 
-Бяз скрайнасьцяў.
+\subsection{Бяз скрайнасьцяў.}
 Фруктоза ў садавіне не ўяўляе шкоды, асабліва калі вы ўкладаецеся ў норму калёрыяў. Цукар натуральным чынам зьмяшчаецца ў садавіне, у гародніне. Але гэта мала ўплывае на цукар у крыві, бо клятчатка ды іншыя кампанэнты гародніны і садавіны запавольваюць усмоктваньне цукру, хоць вельмі салодкімі ягадамі (вінаград) ня варта захапляцца. А вось фруктовыя сокі валодаюць ужо ўсімі нэгатыўнымі ўласьцівасьцямі цукру.
 
-Замяніце дэсэрты.
+\subsection{Замяніце дэсэрты.}
 Калі вы звыклі да салодкіх дэсэртаў, знайдзіце для сябе карысны сьпіс здаровых дэсэртаў. Гэта могуць быць сырыя гарэхі, горкая чакаляда, ягады, садавіна (ківі, авакада).
 
 Вылучаюць «рэзыстэнтныя» крухмалы, якія карысныя для мікрафлёры і ўтрымліваюцца ў зеляніне, халоднай бульбе, бабовых. Форма крухмалу амілапэктын (бульба, кукуруза, рыс) зьяўляецца маларазгалінаванай і лёгка распадаецца, спрыяючы больш выяўленаму павышэньню глюкозы ў крыві, а вось амілоза (яблыкі, гарох, гародніна) больш шчыльна запакаваная, таму павольней распадаецца ў кішачніку.
 
-Схаваная гародніна.
+\subsection{Схаваная гародніна.}
 Калі вам цяжка звыкнуць да гародніны ў штодзённым рацыёне, пачніце патроху дадаваць яе ў свае звычайныя стравы, каб адаптавацца, ужываць у выглядзе кашаў, кактэйляў і да т.п.
 
-Розныя крухмалы.
+\subsection{Розныя крухмалы.}
 Нягледзячы на агульны тэрмін «крухмал», гэтыя рэчывы могуць быць зусім рознымі ў пляне ўплыву на наш арганізм. Вылучаюць так званыя «рэзыстэнтныя» крухмалы, якія карысныя для мікрафлёры, іх шмат у зеляніне, халоднай бульбе, бабовых. Форма крухмалу амілапэктын (бульба, кукуруза, рыс) зьяўляецца маларазгалінаванай і лёгка распадаецца, спрыяючы больш выяўленаму павышэньню глюкозы ў крыві, а вось амілоза (яблыкі, гарох, гародніна) больш шчыльна запакаваная, таму павольней распадаецца ў кішачніку. Цікава, што халодная бульба мае ніжэйшы глікемічны індэкс за кошт зьмены формы крухмалу ў бульбе.
 
-Ашчаджальная гатоўля.
+\subsection{Ашчаджальная гатоўля.}
 Любая апрацоўка прадукту – яго драбненьне, награваньне, гатаваньне пры высокіх тэмпэратурах – павышае яго глікемічны індэкс, прыводзіць да зьніжэньня памеру часьцінак крухмалу. Таму ежа пакаёвай тэмпэратуры мае меншы глікемічны індэкс. Апарваньне кіпнем, варка al dente, фэрмэнтацыя, запарваньне – больш ашчаджальныя спосабы гатаваньня.
 
-Харчовыя валокны – гэта важная частка рацыёну.
+\subsection{Харчовыя валокны – гэта важная частка рацыёну.}
 Аптымальна атрымліваць іх праз прадукты, а не праз дабаўкі. У дасьледаваньнях выкарыстаньне дабаўленай клятчаткі аказалася неэфэктыўным. Зьвярніце ўвагу, што распушчальныя харчовыя валокны (пэктыны, альгінаты, сьлізі) больш карысныя і лепей насычаюць, чым не распушчальныя (цэлюлоза, лігнін). У гародніне ня менш клятчаткі, чым у збожжавых прадуктах, і аддаваць перавагу лепей ім. Сярод крупаў бабовыя маюць добры набор харчовых валокнаў, а акрамя гэтага яшчэ й нізкі глікемічны індэкс. Прэбіётыкі ўтрымліваюцца ў натуральным відзе ў харчовых прадуктах, але ёсьць асобна і ў выглядзе дабавак: фруктаалігацукрыды, інулін, лактулоза, бэта-глюканы, псіліум і многае іншае.
 
-Антынутрыенты.
+\subsection{Антынутрыенты.}
 Існуюць расьлінныя прадукты, якія ўтрымліваюць шэраг злучэньняў пад назвай «антынутрыенты», што выпрацоўваюцца для абароны. Да іх адносяць фіцінавую кіслату, фітаэстрагены, лектыны і г. д. Пры ўжываньні ў вялікай колькасьці збажыны або бабовых антынутрыенты могуць нэгатыўна ўплываць на арганізм (фітаты са збажыны зьніжаюць усмоктваньне жалеза і цынку, фітаэстрагены з соі ўплываюць на гарманальны балянс, лішак шчаўевай кіслаты павялічвае рызыку камянёў у мачавым пухіры і г. д.). Для зьніжэньня дзеяньня фітаэстрагенаў выкарыстоўваюць замочваньне (на ноч ці на суткі), фэрмэнтацыю, прарошчваньне, кіслае вымочваньне. Але калі вы ясьцё невялікую колькасьць мучнога і крупаў, то можна не турбавацца пра пабочныя эфэктах антынутрыентаў. Пры гэтым заліваць крупы варта – гэта скарачае тэрмін гатаваньня і зьніжае глікемічны індэкс гатовай стравы. Небясьпека іншых антынутрыентаў, асабліва лектынаў, значна перабольшаная!
 
-Індывідуальная рэакцыя.
+\subsection{Індывідуальная рэакцыя.}
 Важна адсочваць індывідуальную рэакцыю на прадукты, бо яна можа адрозьнівацца ў залежнасьці ад шматлікіх фактараў. Цікава, што харчовыя валокны ў рацыёне паляпшаюць глікемічны кантроль, але толькі праз 24 гадзіны пасьля таго, як вы іх зьелі. Таксама на ваш асабісты глікемічны індэкс уплывае колькасьць солі ў рацыёне, час прыёму ежы з моманту абуджэньня, узровень халестэрыну і нават колькасьць вады ў рацыёне. Зразумела, адэкватны водны рэжым зьвязаны зь лепшымі паказьнікамі. Ключавая прычына гэтага – мікрафлёра кішачніка. Таму важна выбіраць вугляводы ня толькі для сябе, але і з разлікам на сваю мікрафлёру, улічваючы пры гэтым удзельную калярыйную шчыльнасьць вугляводаў, ступень апрацоўкі і ачысткі, від гатаваньня, даданьне харчовых дабавак. Паляпшаючы мікрафлёру, мы палепшым і пераноснасьць вугляводных прадуктаў і свой абмен рэчываў. Маніторынг уздыму глюкозы праз гадзіну і дзьве гадзіны пасьля ежы дапаможа скласьці свой індывідуальны глікемічны профіль, для гэтага можна выкарыстоўваць як кампактны аналізатар крыві з пальца, так і сыстэмы сталага маніторынгу.
 
-Дадаткі.
+\subsection{Дадаткі.}
 Даданьне солі павялічвае глікемічны індэкс (натрый паскарае ўсмоктваньне глюкозы), даданьне тлушчаў зьмяншае глікемічны індэкс, даданьне кіслага таксама зьмяншае глікемічны індэкс (карысна цытрынай, лаймам або воцатам запраўляць салату і гародніну).
 
-Цукразаменьнікі.
+\subsection{Цукразаменьнікі.}
 Існуе наўпроставая (таксычны) і ўскосная шкода цукразамяняльнікаў. Іх таксычнае ўзьдзеяньне слабое (яны адносна бясьпечныя), але яны моцна дзейнічаюць на клеткавыя рэцэптары да салодкага. Гэтыя рэцэптары знаходзяцца яшчэ ў мностве ворганаў: падстраўніцы, мозгу, крывяносных сасудах, касьцях, страўніку, кішачніку, тлушчавай тканкі. Цукразамяняльнікі прыкметна зьмяняюць выдзяленьне кішачных гармонаў, парушаюць экспрэсію бялкоў – пераносчыкаў глюкозы, нават пры поўнай адсутнасьці цукру ўплываюць на выдзяленьне інсуліну і ўзровень глюкозы ў крыві, узмацняюць апэтыт. Таму нядзіўна, што цукразаменьнікі павялічваюць рызыку цукровага дыябэту. Актывацыя рэцэптараў да салодкага прыводзіць да скарачэньня крывацёку ў сасудах галаўнога мозгу. Менавіта таму падсалоджвальнікі павялічваюць частату інсультаў і нэўрадэгенэратыўных захворваньняў. Спажываньне цукразаменьнікаў нэгатыўна ўплывае на дафамінавую сыстэму мозгу і мігдаліцы, парушаючы іх працу. Залішняе ўжываньне цукразамяняльнікаў зьніжае мазгавы водгук на прыём іншых салодкіх прадуктаў, зьніжаючы і адчувальнасьць да салодкага. Цукразамяняльнікі таксама ўплываюць на работу прэфрантальнай кары мозгу. Надзейных доказаў, што цукразаменьнікі дапамагаюць схуднець, ня знойдзена.
 
 Цукразамяняльнікі прыкметна зьмяняюць выдзяленьне кішачных гармонаў, парушаюць экспрэсію бялкоў – пераносчыкаў глюкозы, нават пры поўнай адсутнасьці цукру ўплываюць на выдзяленьне інсуліну і ўзровень глюкозы ў крыві, узмацняюць апэтыт.
 
-Каратыноіды.
+\subsection{Каратыноіды.}
 Каратыноіды – гэта шырокая група фітанутрыентаў, якая ўключае бэта-каратын, лікапін, лютэін, зэаксантын, астаксантын, крыптаксантын, фукаксантын. Яны тлушчараспушчальныя, таму могуць назапашвацца ў скуры і тлушчавай тканцы, валодаюць імунастымулюючым, фотаахоўным, антыаксыдантным эфэктам, абараняюць сятчатку вока. Пры спажываньні на працягу 12 тыдняў яны могуць назапашвацца ў скуры, што абараняе яе ад фотастарэньня і дае больш здаровае адценьне. Каратыноідаў багата ў зялёнай і жоўтай гародніне (морква, гарбуз, шпінат, зялёны лук), чырвонай гародніне (таматы, перац), бабовых, ягадах, садавіне. Каратыноіды лепш засвойваюцца пры тэрмічнай апрацоўцы і даданьні тлушчу.
 
-Флаваноіды.
+\subsection{Флаваноіды.}
 Гэта шырокая група, якая ўключае антаціанідыны (яркі колер чарніцаў, чарнаплоднай рабіны і да т.п.), фітаэстрагены, флавоны, ізафлавоны, лігнаны, катэхін (у зялёнай гарбаце). Некаторыя ізафлавоны соі могуць нэгатыўна ўзьдзейнічаць на мужчынскія палавыя гармоны і на работу шчытавіцы.
 
-Глюказіналаты.
+\subsection{Глюказіналаты.}
 Найбольш вядомыя прадстаўнікі – сульфарафан у брокалі (пажадана есьці яе сырой), у хрэне і каляровай капусьце, гэта індол-3-карбінол, які валодае прафіляктычным дзеяньнем у дачыненьні да раку грудзей і падстраўніцы.
 
-Алілсульфіды.
+\subsection{Алілсульфіды.}
 Гэтыя злучэньні ўтрымліваюць серу ў сваім складзе, сустракаюцца ў часныку і розных відах цыбулі. Валодаюць антымутагенным дзеяньнем, паляпшаюць работу печані.
 
-Фэрмэнтаваныя вугляводы.
+\subsection{Фэрмэнтаваныя вугляводы.}
 Фэрмэнтацыя прадуктаў – гэта выдатны спосаб павялічыць іх пажыўныя ўласьцівасьці. Можна як квасіць гародніну, так і рабіць зь яе квасы.
 
-Сырая гародніна.
+\subsection{Сырая гародніна.}
 Аптымальна значную долю, ня менш за палову ад содневай нормы гародніны, садавіны і зеляніны, трэба зьядаць у сырым выглядзе.
 
-Багавіньне.
+\subsection{Багавіньне.}
 У багавіньні ўтрымліваюцца фітастэролы, фукаксантын, лямінарыны, фуканы, фікаэрытрын, фікацыянін і т. д.
 
-Газаўтварэньне.
+\subsection{Газаўтварэньне.}
 Пры павелічэньні долі расьлінных прадуктаў можна сутыкнуцца з падвышаным газаўтварэньнем. Для прафілактыкі павялічвайце яе паступова, пачніце з тэрмаапрацаваных прадуктаў, вар'іруйце прадукты (сачавіца замест гароху), выкарыстоўвайце мультыпрабіётыкі.
 
-FODMAP дыета.
+\subsection{FODMAP дыета.}
 FODMAP – гэта англамоўны тэрмін-акронім, які пазначае вугляводы з кароткім ланцугом (алігацукрыды, дыцукрыды, монацукрыды, паліолы), што кепска ўсмоктваюцца і могуць прыводзіць да падвышанага газаўтварэньня ды іншым разладаў. Але ў малой колькасьці яны зьяўляюцца прабіётыкамі. Фруктоза, якой шмат у цукры і садавіне, фруктаны ў гародніне (капусты, часнык), галяктаны (соя, бабы), ляктоза (малочны цукар) і іншыя. Іх абмежаваньне можа дапамагчы пры парушэньнях стрававальнага працэсу.
 
-Безглютэнавая дыета.
+\subsection{Безглютэнавая дыета.}
 Людзям, якія маюць генэтычную схільнасьць да цэліякіі, важна прыбраць глютэназьмяшчальныя прадукты з рацыёну. Існуюць зьвесткі, што ёсьць непераноснасьць глютэну, не зьвязаная з цэліякіяй, магчыма, што людзям з сындромам раздражнёнага кішачніка і некаторымі іншымі станамі (шызафрэнія і да т.п.) будзе карысна прыбраць глютэн. Але для абсалютнай большасьці здаровых людзей плюсаў менавіта ад адсутнасьці глютэну ня будзе, а эфэкт "безглютенавай" дыеты зьвязаны толькі са зьмяншэньнем хлебабулачных вырабаў у рацыёне. Але ў такіх прадуктах нічога незаменнага няма!
 
-Вэганская дыета.
+\subsection{Вэганская дыета.}
 Поўная адмова ад прадуктаў жывёльнага паходжаньня ня мае даведзеных карысных уласьцівасьцяў, але пры гэтым павялічвае шэраг рызыкаў для здароўя, спалучаных з дэфіцытам шматлікіх важных злучэньняў, уключаючы вітамін В12, вітамін D, цынк, жалеза і іншыя. Дасьледаваньні паказваюць, што вэганы маюць павышаную рызыку сьмерці ў параўнаньні зь людзьмі, якія прытрымліваюцца іншых клясычных дыетаў, напрыклад міжземнаморскай. З іншага боку, вэгетарыянскія дыеты зьмяншаюць рызыку цукровага дыябету і маюць шэраг карысных уласьцівасьцяў.
 
 У сярэднім низкоуглеводная дыета - гэта менш за 30% калёрыяў са здаровых вугляводаў (60-120 грамаў засваяльных вугляводаў). Такія дыеты маюць шэраг карысных уласьцівасьцяў, у тым ліку лепшую сытасьць і станоўчы ўплыў на мэтабалізм.
 
-Пэскетэрыянства.
+\subsection{Пэскетэрыянства.}
 Расьлінная дыета з умераным даданьнем у ежу халодакроўных жывёл (рыба, морапрадукты і т. п.). Зьяўляецца дастаткова эфэктыўнай і збалянсаванай.
 
-Plant based diet.
+\subsection{Plant based diet.}
 Дыета, заснаваная на цэльнай расьліннай ежы з даданьнем як тлушчаў, так і жывёльных прадуктаў. Ключ да яе – цэльныя расьліны зь мінімальнай апрацоўкай.
 
-Нізкавугляводная дыета.
+\subsection{Нізкавугляводная дыета.}
 Паняцце нізкавугляводнай дыеты, у прынцыпе, расьцяглае. Калі вы пачалі менш есьці вугляводаў, то для вас гэта ўжо і ёсьць нізкавугляводная дыета. У адэкватным разуменьні нізкавугляводная дыета мае на ўвазе зьніжэньне колькасьці цукру, сытных мучных і крупяных вырабаў і павелічэньне колькасьці гародніны і зеляніны. Пры гэтым агульны аб'ём вугляводаў не мяняецца, а іх колькасьць зьніжаецца. Зьвярніце ўвагу, што, акрамя агульнага значэньня вугляводаў, значэньне мае і колькасьць клятчаткі, якая не ўваходзіць у агульны лік калёрыяў.
+
 У сярэднім нізкавугляводная дыета – гэта менш за 30% калёрыяў са здаровых вугляводаў (60-120 грамаў засваяльных вугляводаў). Такія дыеты маюць шэраг карысных уласьцівасьцяў, у тым ліку лепшую сытасьць і станоўчы ўплыў на мэтабалізм. Няправільны падыход да нізкавугляводных дыетаў уключае моцнае павелічэньне долі бялку і выкарыстаньне маленькіх порцый мучных вугляводаў. Зьніжэньне калёрыяў з вугляводаў звычайна кампэнсуецца тлушчамі (LCHF (low carb high fat)). Больш радыкальнае зразаньне вугляводаў – гэта кетадыета, яна разглядаецца ў наступным разьдзеле. Мы можам чаргаваць нізка- і высокавугляводныя пэрыяды ў залежнасьці ад узроўню фізычнае актыўнасьці.
