--- a/nutrition/chapter20.tex
+++ b/nutrition/chapter20.tex
@@ -1,103 +1,106 @@
-Правіла 20. Тлушчы
+\chapter{Тлушчы}
 
 Тлушчы зьяўляюцца важным нутрыентам, што станоўча ўплываюць на насычэньне і мэтабалізм, і выдатнай крыніцай энэргіі. Акісьленьне тлушчаў у арганізьме адрозьніваецца ад выкарыстаньня вугляводаў больш ашчадным рэжымам. У залежнасьці ад хімічнай будовы (колькасьць падвойных сувязяў) вылучаюць насычаныя тлушчы (без падвойных сувязяў), монаненасычаныя (з адной сувяззю – амэга-9, амэга-7 і іншыя), поліненасычаныя (дзве падвойныя сувязі – амэга-3, амэга-6 і іншыя). Лічбы абазначаюць месца разьмяшчэньня апошняй (амэга) падвойнай сувязі. Тлушчы – гэта ня толькі крыніца энэргіі, але й незаменныя рэчывы, зь якіх утвараюцца сыгнальныя малекулы, што кіруюць шматлікімі працэсамі ў арганізьме. Акрамя гэтага, важнай зьяўляецца і структурная функцыя тлушчаў: напрыклад, большасьць амэга-3 тлустых кіслотаў знаходзіцца ў галаўным мозгу.
+
 Рознае стаўленьне да тлушчаў усталявалася паміж тымі, хто лічыць, што гэта «шкодна», і тымі, хто ўпэўнены, што тлушчавая дыета вырашыць усе праблемы. Насамрэч для правільнага выкарыстаньня тлушчаў у рацыёне трэба ўлічваць спосаб гатоўлі, спалучэньне зь іншымі прадуктамі і шматлікае іншае. Давайце разьбяромся, як збалянсаваць спажываньне тлушчаў.
 
 У залежнасьці ад хімічнай будовы (колькасьць падвойных сувязяў) вылучаюць насычаныя тлушчы (без падвойных сувязяў), монаненасычаныя (з адной сувяззю – амэга-9, амэга-7 і іншыя), поліненасычаныя (дзве падвойныя сувязі – амэга-3, амэга-6 і іншыя). Лічбы абазначаюць месца разьмяшчэньня апошняй (амэга) падвойнай сувязі.
 
-Як зьявілася праблема?
+\section{Як зьявілася праблема?}
 
 З даўніх часоў людзі выкарыстоўвалі тлушчы як надзейную крыніцу энэргіі, для многіх народнасьцяў (эскімосы і да т.п.) тлушчы былі галоўным нутрыентам. Традыцыйна тлушч часьцей выкарыстоўваўся жыхарамі халаднейшых краінаў. У нацыянальнай кухні краінаў з умераным кліматам тлушч таксама складае значную долю. Аліўкавы алей (першага халоднага адціску) – самая заўважная асаблівасьць вядомай і добра вывучанай міжземнаморскай дыеты.
+
 Аднак у 50-х гадах адбылося сур'ёзнае зьмяненьне ролі тлушчаў. Пасьля сардэчнага прыступу прэзідэнта ЗША Дуайта Эйзэнхаўэра і росту сардэчна-сасудзістых захворваньняў у ЗША ўвага грамадскасьці была прыцягнутая да пошуку сродкаў прафіляктыкі гэтых захворваньняў. Шырокую вядомасьць і прызнаньне пры гэтым атрымала дзейнасьць Ансэля Кейса, які на аснове сваіх назіраньняў абвясьціў жывёльны тлушч вінаватым у захворваньнях сэрца. І хоць яго работы былі ненадзейнымі і крытыкаваліся, гэты пункт гледжаньня стаў агульнапрызнаным і ўвайшоў у дыеталягічныя рэкамэндацыі. Аўтараў, якія прытрымліваліся іншых пунктаў гледжаньня, такіх як Джон Юдкін (лічыў цукар прычынай праблемы), не ўспрымалі сур'ёзна. Усё гэта прывяло да дэманізацыі халестэрыну і тлушчаў, што выявілася ў рэзкім скарачэньні колькасьці жывёльнага тлушчу, павелічэньні колькасьці абястлушчаных прадуктаў, долі транстлушчаў, расьлінных алеяў, павелічэньні ўжываньня вугляводных прадуктаў (паста, мюсьлі, кашы, сокі), цукру. Але гэтыя зьмены не паўплывалі на здароўе станоўча, а толькі пагоршылі эпідэмію атлусьценьня. Ёсьць меркаваньне, што многія з гэтых рэкамэндацый былі падтрыманыя вытворцамі пэўных прадуктаў харчаваньня.
 
 З даўніх часоў людзі выкарыстоўвалі тлушчы як надзейную крыніцу энэргіі, для многіх народнасьцяў (эскімосы і да т.п.) тлушчы былі галоўным нутрыентам. Традыцыйна тлушч часьцей выкарыстоўваўся жыхарамі халаднейшых краінаў.
 
-Танныя алеі.
+\subsection{Танныя алеі.}
 У мінулым стагоддзі ў рацыёне адбылася зьмена харчовых тлушчаў. Так, людзі сталі спажываць значна больш расьлінных тлушчаў зь лішкам амэга-6 тлустых кіслот (сланечнікавы, баваўняны, соевы, кукурузны алеі), якія рэкамэндаваліся як таньнейшыя і як больш карысныя для арганізму. Транстлушчы таксама актыўна ўкараняліся ў рацыён, пазыцыянуючыся як больш карысныя для здароўя ў параўнаньні з жывёльнымі насычанымі тлушчамі. Аднак надмер гэтых тлушчаў прывёў адно да павелічэньня росту сардэчна-сасудзістых захворваньняў.
 
-Як гэта ўплывае на здароўе?
+\section{Як гэта ўплывае на здароўе?}
 
 Сёньня ўжо вядома, што нізкатлушчавыя дыеты ня маюць ахоўнага ўзьдзеяньня на сэрца. Так, утрыманьне тлушчаў вышэй за 35%, а вугляводаў менш за 60% прыводзіць да зьніжэньня сардэчна-сасудзістых захворваньняў. У дасьледаваньнях больш высокае спажываньне тлушчаў у параўнаньні з самым нізкім зьніжала сьмяротнасьць на 30%, а рызыку інсульту на 18%.
 
-Насычаныя тлушчы.
+\subsection{Насычаныя тлушчы.}
 Насычаныя тлушчы шырока сустракаюцца ў прыродзе. Варта адзначыць, што іх няма ў чыстым выглядзе, тлустыя прадукты ўтрымліваюць сумесь розных тлустых кіслотаў. Напрыклад, у сале насычаныя тлушчы складаюць 42%, монаненасычаныя – 44%. У сьметанковым масьле насычаныя тлушчы складаюць 56%, монаненасычаныя – 29%, поліненасычаныя – 3%. Большасьць тлустых кіслотаў маюць доўгі ланцужок малекулы, выключэньне – сярэднеланцужковыя насычаныя тлустыя кіслоты, такія, як у какосавым алеі. Яны хутчэй і лепей засвойваюцца, таму какосавы алей карыстаецца заслужанай папулярнасьцю.
 
 Аднак тлушчы з доўгімі ланцужкамі выдатна і надоўга насычаюць, стымулюючы выдзяленьне гармону халецыстакініну. Насычаныя тлушчы прадстаўлены рознымі малекуламі тлустых кіслотаў, якія адрозьніваюцца сваімі ўласьцівасьцямі. Стэарынавая тлустая кіслата (багата ў барановым тлушчы) мае станоўчыя ўласьцівасьці, лішак пальмітынавай мае й нэгатыўныя аспэкты. Утрыманьне пальмітынавай кіслаты ў сучасным фастфудзе перавышае палову ад агульнага складу ўсіх тлустых кіслотаў. Пальмітынавая кіслата дае своеасаблівы «тлусты смак» і зьяўляецца досыць таннай. Аднак уплыў пальмавага алею ва ўмераных колькасьцях на здароўе нэўтральны.
 
-Монаненасычанымі тлустыя кіслоты.
+\subsection{Монаненасычанымі тлустыя кіслоты.}
 Уключаюць у сябе алеінавую (амэга-9), пальмітаалеінавую (амэга-7) і шэраг іншых тлустых кіслот. Найбольш вывучаная алеінавая тлустая кіслата, якой шмат у аліўкавым алеі (76%), авакада (70%), многіх жывёльных прадуктах (у яйках 50%). Багата яе ў мігдале і лясным гарэху. Алеінавая тлустая кіслата здольная зьніжаць рызыку разьвіцьця некаторых відаў раку, павышаць адчувальнасьць да інсуліну, зьніжаць узровень сыстэмнага запаленьня. Монаненасычаныя тлушчы станоўча ўплываюць на здароўе, паляпшаюць як вугляводны, так і тлушчавы абмен, зьніжаюць рызыку разьвіцьця многіх захворваньняў.
 
-Поліненасычаныя тлушчы.
+\subsection{Поліненасычаныя тлушчы.}
 Поліненасычаныя тлушчы адносяцца да незаменных злучэньняў. З аднаго боку, іх павелічэньне ў рацыёне дабратворна ўплывае на сардэчна-сасудзістую сыстэму. Зь іншага – поліненасычаныя тлушчы схільныя да перакіснага акісьленьня праз сваю хімічную структуру, таму іх меншая доля ў клеткавых мэмбранах зьвязаная з большай працягласьцю жыцьця празь меншую актыўнасьць працэсаў перакіснага пашкоджаньня ліпідаў і ўтварэньня рознага клеткавага сьмецьця.
 
-Дысбалянс амэга-3 і амэга-6 поліненасычаных тлустых кіслотаў.
+\subsection{Дысбалянс амэга-3 і амэга-6 поліненасычаных тлустых кіслотаў.}
 Незаменныя тлустыя кіслоты паступаюць зь ежай, частка іх спальваецца, а частка ідзе на сынтэз вытворных, адмысловых малекулаў эйказаноідаў. З амэга-6 тлустых кіслотаў (лінолевая) утвараюцца эйказаноіды, якія павялічваюць агульны ўзровень запаленьня, павялічваюць пранікальнасьць сасудаў, спрыяюць звадкаваньню крыві, звужэньню бронхаў, утварэньню сьлізі і да т.п. А вось з амэга-3 тлустых кіслотаў (эйказапэнтаенавая і даказагексаенавая) утвараюцца супрацьзапаленчыя эйказаноіды, якія валодаюць супрацьлеглымі эфэктамі. Бо фэрмэнт, які ператварае малекулы поліненасычаных тлустых кіслотаў у эйказаноіды, агульны, то й суадносіны амэга-3 і амэга-6 у ежы будуць уплываць на суадносіны іх вытворных у тканках арганізму. Для дакладнага вызначэньня балянсу і падбору дакладнай дазоўкі амэга-3 тлустых кіслотаў можна здаць аналіз на амэга-індэкс, які паказвае іх рэальныя суадносіны ў арганізьме.
 
 Дастатковая колькасьць амэга-3 тлустых кіслотаў маецца ў ежы жывёльнага паходжаньня, але сёньня ў нашым рацыёне зьявілася мноства аналягаў з высокім утрыманьнем амэга-6 тлустых кіслотаў, якія нясуць шкоду здароўю.
 
 Раней мы атрымлівалі дастатковую колькасьць амэга-3 зь ежы жывёльнага паходжаньня – яйкі, малочныя прадукты, мяса жывёлаў і птушак (трава мае расьлінную амэга-3 кіслату, якую жывёлы ператвараюць у жывёльныя формы амэга-3). Сёньня ў кармах для жывёлаў пераважаюць збожжавыя культуры, у якіх практычна няма амэга-3 тлустых кіслот. Нароўні са скарачэньнем колькасьці амэга-3 у нашым рацыёне зьявілася мноства танных расьлінных алеяў з высокім утрыманьнем амэга-6 тлустых кіслотаў. Працэнтнае ўтрыманьне амэга-6 тлустых кіслотаў у сланечнікавым алеі складае 60%, багата яго ў соевым, баваўняным, кукурузным ды іншых прамысловых алеях. Праз сваю таннасьць гэтыя маслы выкарыстоўваюцца ў шматлікіх паўфабрыкатах і гатовай ежы ў вялікай колькасьці. Лішак амэга-6 тлушчаў у рацыёне павялічвае ўзровень запаленьня, рызыку сардэчна-сасудзістых, аўтаімунных захворваньняў. Лішак лінолевай амэга-6 тлустай кіслаты можа павышаць рызыку інфаркту, дэпрэсій, нэўрадэгенэратыўных захворваньняў, сыстэмнага запаленьня, шэрагу пухлінаў.
 
-Дэфіцыт амэга-3 тлустых кіслотаў (эйказапэнтаенавая ЭПК і даказагексаенавая ДГК – кіслоты) – гэта даволі частая праблема.
+\subsection{Дэфіцыт амэга-3 тлустых кіслотаў (эйказапэнтаенавая ЭПК і даказагексаенавая ДГК – кіслоты) – гэта даволі частая праблема.}
 У нашым арганізьме ЭПК і ДГК граюць важную ролю, уваходзячы ў склад галаўнога мозгу і сятчаткі вачэй. Яны паляпшаюць кагнітыўныя функцыі, зьмяншаюць рызыку дэпрэсіі, зьмяншаюць рызыку запаленьня, карысныя для прафілактыкі сардэчна-сасудзістых захворваньняў і карэкцыі ліпіднага профілю, асабліва важныя для дзяцей і цяжарных. Маюць яны і агульныя ўласьцівасьці, і сваю спэцыфіку, бо ЭПК валодае большай супрацьзапаленчай актыўнасьцю, а ДГК патрэбнейшы для падтрыманьня ўстойлівых мэмбранаў нэрвовых клетак.
 
-Транстлушчы.
+\subsection{Транстлушчы.}
 Транстлушчы павышаюць рызыку сардэчна-сасудзістых захворваньняў, могуць павялічваць рызыку дыябэту, раку, дэпрэсій і хваробы Альцгеймэра пры высокім узроўні спажываньня.
 
-Асноўныя прынцыпы
+\section{Асноўныя прынцыпы}
 
-Колькасьць тлушчаў у рацыёне.
+\subsection{Колькасьць тлушчаў у рацыёне.}
 Дастатковая колькасьць тлушчу ў дыеце на ўзроўні 35-40% – гэта цалкам здаровае рашэньне. Аднак павелічэньне долі тлушчаў абавязкова павінна суправаджацца памяншэньнем долі канцэнтраваных вугляводаў, спалучэньне высокакалярыйны тлушч + высокакалярыйныя вугляводы вельмі разбуральнае для мэтабалізму. Канкрэтная прапорцыя нутрыентаў таксама залежыць ад генэтычных асаблівасьцяў. Цыкліраваньне нутрыентаў – гэта выхад з сытуацыі. Зьвярніце ўвагу, што дадаваць тлушчы бескантрольна ня будзе добрым рашэньнем, бо яны маюць вельмі высокую калярыйную шчыльнасьцьі могуць прывесьці да надмернага каляражу.
 
-Суадносіны розных відаў тлустых кіслотаў.
+\subsection{Суадносіны розных відаў тлустых кіслотаў.}
 Большую частку тлушчаў мусяць складаць насычаныя тлушчы з рознай даўжынёй ланцуга, ад сярэднеланцуговых да доўгаланцуговых, і монаненасычаныя тлушчы. Канкрэтныя іх суадносіны ў дыеце вызначаюцца генэтычнымі фактарамі, якія можна выявіць пры ДНК-аналізе. Некаторым будзе карысна ўжываць больш насычаных тлушчаў, іншым – больш аліўкавага алею. Аптымальнае ўмеранае ўжываньне сьметанковага, ялавічнага, барановага, сьвінога (сала), пальмавага, какосавага ды іншых насычаных тлушчаў у спалучэньні з монаненасычанымі тлушчамі (аліўкавы алей халоднага адціску). Больш высокае спажываньне тлушчу зьвязанае з паніжаным апэтытам.
 
 Важна датрымлівацца аптымальнага балянсу амэга-3 і амэга-6 тлустых кіслотаў. Для гэтага неабходна паменшыць спажываньне амэга-6 тлустых кіслотаў (паўфабрыкаты, алеі накшталт соевага, сланечнікавага, кукурузнага, кунжутнага, канаплянага і да т.п.) і павялічыць спажываньне жывёльных формаў амэга-3 тлустых кіслотаў (марская рыба, морапрадукты, мяса і яйкі).
 
 У цэлым трэба скараціць колькасьць поліненасычаных тлустых кіслотаў, асабліва атрыманых з алеяў. Гэта значыць, што варта пазьбягаць абсалютнай большасьці расьлінных алеяў (уключна з ільняным алеем), за рэдкім выключэньнем (аліўкавы, какосавы і некаторыя іншыя).
 
-Суадносіны амэга-3 і амэга-6.
+\subsection{Суадносіны амэга-3 і амэга-6.}
 Для падтрыманьня здароўя неабходна датрымлівацца аптымальнага балянсу амэга-3 і амэга-6 тлустых кіслотаў. Для гэтага важна паменшыць спажываньне амэга-6 тлустых кіслотаў (паўфабрыкаты, алеі накшталт соевага, сланечнікавага, кукурузнага, кунжутнага, канаплянага і да т.п.) і павялічыць спажываньне жывёльных формаў амэга-3 тлустых кіслотаў (эйказапэнтаенавай ЭПК і даказагексаенавай ДГ. Шмат амэга-3 тлустых кіслотаў маецца ў жывёльных прадуктах травянога выпасу і морапрадуктах. Больш за ўсё іх у тлустай марской рыбе. Так у селядца 16,8 грамаў амэга-3 на кіляграм сырой масы, у сардзіне – 25, ласосі – 12, стаўрыдзе – 8. Дастаткова 2-3 разы на тыдзень ужываць порцыю рыбы, каб дастаткова атрымліваць ўсе неабходныя злучэньні. Ужываньне дабавак амэга-3 тлустых кіслотаў у вялікіх колькасьцях працяглы час можа быць таксама празьмерным і нават небясьпечным.
 
-Абмежаваць спажываньне транстлушчаў (кандытарскія вырабы, выпечку, маргарын і да т.п.).
+\subsection{Абмежаваць спажываньне транстлушчаў (кандытарскія вырабы, выпечку, маргарын і да т.п.).}
 Маргарын для выпечкі можа ўтрымліваць 20-40% транстлушчаў, шмат іх у кулінарных тлушчах, спрэдах, каўбасных вырабах, цукерках і фастфудзе. Часта яны хаваюцца за агульнай назвай «алей», «гідрагенізаваныя алеі» і т.п.
 
-Як трымацца правіла? Ідэі і парады
+\section{Як трымацца правіла? Ідэі і парады}
 
-Захоўваньне тлушчаў.
+\subsection{Захоўваньне тлушчаў.}
 Тлушчы схільныя да акісьленьня пад узьдзеяньнем тэмпэратуры, сьвятла, паскараюць акісьленьне некаторыя мэталы. Захоўвайце тлушчы ў цёмным халодным месцы, закрывайце бутэлькі, сачыце за тэрмінам прыдатнасьці. Па магчымасьці купляйце сьвежы аліўкавы алей, сьвежае сала і т.п.
 
-Гатоўля.
+\subsection{Гатоўля.}
 Што да награваньня і смажаньня, дык ёсьць шмат фактараў, якія ўплываюць на выбар тлушчу (ад выгляду тлушчу, кропкі дымленьня і г. д.), але перадусім варта памятаць, што смажаньне нават на добрым тлушчы – ня самы карысны спосаб гатоўлі. Лепш за ўсё смажыць на насычаных тлушчах у невялікай колькасьці, яны самыя ўстойлівыя. Напрыклад, нашы бабулі рабілі яечню, змазваючы патэльню кавалачкам сала – і гэта нашмат карысьней, чым калі вы выкарыстоўваеце сланечнікавы алей пры смажаньні. Пазьбягайце ў рацыёне тлушчаў, якія мелі тэрмічную апрацоўку.
 
-Расьлінныя алеі.
+\subsection{Расьлінныя алеі.}
 Адмоўцеся ад ужываньня расьлінных алеяў з высокім утрыманьнем поліненасычаных тлустых кіслотаў, як амэга-3, так і амэга-6. Некаторыя віды алеяў традыцыйна не ўжывалі ў ежу. Напрыклад, ільняное. Нашы продкі выкарыстоўвалі яго ў асноўным для апрацоўкі дрэва супраць гніеньня (аліфа), гермэтызацыі вокнаў (паста з крэйды і льнянога алею), прамочваньня тканінаў. Ільняны алей вельмі хутка полімэрызуецца з утварэньнем плёнкі, асабліва пры крыху падвышаных тэмпэратурах, трапленьні сонечных прамянёў, кантакце з паветрам і некаторымі мэталамі. Абсалютная большасьць вытворцаў не гарантуюць датрыманьня строгіх стандартаў яго вытворчасьці, а надмер поліненасычаных тлустых кіслотаў у дыеце можа паскараць старэньне.
 
 Традыцыйна льняны алей выкарыстоўваўся пры апрацоўцы дрэва супраць гніеньня, прамочваньні тканінаў, бо ён хутка акісьляецца і полімэрызуецца пры трапленьні сонечных прамянёў, кантакце з паветрам ці мэталамі.
 
-Ільняны алей не замена рыбінаму тлушчу і рыбе.
+\subsection{Ільняны алей не замена рыбінаму тлушчу і рыбе.}
 Ільняны алей неэфэктыўны як крыніца амэга-3. Рэч у тым, што ўсе амэга-3 тлустыя кіслоты неаднолькавыя, ёсьць расьлінныя амэга-3 (альфа-ліналенавая АЛК) і жывёльныя амэга-3 (эйказапэнтаенавая ЭПК і даказагексаенавая ДГК). Чалавек ня можа засвоіць АЛК, яму патрэбныя ЭПК і ДГК. У нашым арганізьме ёсьць гены, якія канвэртуюць АЛК у ЭПК, але гэты працэс неэфэктыўны, толькі 1-6% АЛК можна канвэртаваць. А чым больш вы ясьцё АЛК і амэга-6, тым мацней зьмяншаецца гэтая канвэрсія.
 
 Для эфэктыўнай канвэрсіі АЛК у ЭПК патрэбная высокая актыўнасьць гена дэсатуразы FASD2. Але ў 85% эўрапэйцаў, якія ўжываюць традыцыйна больш жывёльных прадуктаў, яго актыўнасьць нізкая, таму льняны алей, чыя, алей грэцкага гарэха не зьяўляюцца эфэктыўнымі для папаўненьня дэфіцыту амэга-3. У экспэрымэнтах ужываньне льнянога масла не ўплывала на ўзровень амэга-3 у крыві, але пры гэтым павялічвалася рызыка раку падкарэньніцы.
 
-Поліненасычаныя тлустыя кіслоты – у складзе цэльных прадуктаў.
+\subsection{Поліненасычаныя тлустыя кіслоты – у складзе цэльных прадуктаў.}
 Як папоўніць дэфіцыт нутрыентаў, не ўжываючы алею? Ежце цэльныя грэцкія гарэхі, пасыпайце ежу кунжутнымі семкамі, разьмяліце насеньне лёну і пасыпце імі салату. У складзе цэльных прадуктаў поліненасычаныя тлушчы стабільнейшыя.
 
-Амега-7 тлустыя кіслоты.
+\subsection{Амега-7 тлустыя кіслоты.}
 Акрамя згаданых амэга-9 монаненасычаных тлустых кіслотаў, ёсьць шэраг і іншых карысных злучэньняў. Напрыклад, пальміталеінавая кіслата, гэта асноўны прадстаўнік амэга-7 кіслот. Яе шмат у рыбе, макадаміі, абляпіхавым алеі. Яна паляпшае мэтабалізм і зьмяншае ўзровень сыстэмнага запаленьня.
 
-Спалучэньне зь зёлкамі.
+\subsection{Спалучэньне зь зёлкамі.}
 Тлушчы выдатна экстрагуюць тлушчараспушчальныя карысныя злучэньні, у тым ліку і духмяныя. Можна настаяць аліўкавы алей на часныку, размарыне, базіліку і інш.
 
-Запраўка салаты.
+\subsection{Запраўка салаты.}
 Ня толькі алеем можна заправіць салату ці гародніну. Вы можаце таксама аддаць перавагу і шэрагу менш калярыйных заправак: кефіру, ёгурту, воцату, соку цытрыны і інш.
 
-Кета.
+\subsection{Кета.}
 Кетадыета – гэта дасягненьне і ўтрыманьне харчовага кетозу, калі значная частка энэргіі выкарыстоўваецца з кетонавых целаў. Па сутнасьці, кетадыета імітуе галаданьне. Дзеля дасягненьня кетозу абмяжоўваюцца вугляводы да 30 (15) грамаў, пры гэтым бялкі не павінны складаць больш за 25% ад агульнай калярыйнасьці. Да лекавых уласьцівасьцяў кетадыеты можна аднесьці зьніжэньне прагрэсаваньня некаторых відаў эпілепсіі, раку, ажно да рэмісіі. Кетадыета дапамагае зьнізіць узровень запаленьня, нармалізаваць імунны адказ. Да станоўчых уласьцівасьцяў таксама адносяцца паляпшэньне настрою (больш высокая сімпатаадрэналавая актыўнасьць), высокія кагнітыўныя функцыі, зьніжэньне голаду (кетонавыя целы прыгнятаюць апэтыт), пахудзеньне з захаваньнем цяглічнай масы, зьніжэньне рызыкі шматлікіх захворваньняў і г. д. Пры наяўнасьці любых захворваньняў абавязковая кансультацыя са спэцыялістам. У цэлым сярэдне- і нізкакалярыйныя дыеты паказваюць лепшыя вынікі ў дачыненьні да працягласьці жыцьця і зьніжэньня запаленьня, чым кетадыета.
 
 Да лекавых уласьцівасьцяў кетадыеты можна аднесьці зьніжэньне прагрэсаваньня эпілепсіі, некаторых відаў раку, ажно да рэмісіі. Кетадыета дапамагае зьнізіць узровень запаленьня, нармалізаваць імунны адказ. Аднак кетадыета пры названых станах зьяўляецца дапаможным, а не асноўным спосабам лекаваньня.
 
 Сярод адмоўных бакоў кетадыеты – адносна складанае датрыманьне з кантролем кетонавых целаў і дыетычнымі абмежаваньнямі (любыя абмежавальныя дыеты павялічваюць рызыку парушэньняў харчовых паводзінаў), парушэньні ліпіднага профілю, зьніжэньне адчувальнасьці да інсуліну, павелічэньне нагрузкі на мочапалавую сыстэму, нэгатыўны ўплыў на мікрафлёру кішачніка, дэфіцыт мінэралаў, вітамінаў, клятчаткі. Першаснае ўваходжаньне ў кетоз суправаджаецца зьніжэньнем працаздольнасьці і шэрагам нэгатыўных чыньнікаў.
+
 Аптымальнай зьяўляецца кетадыета, якая праводзіцца пэрыядычна для карэкцыі пэўных захворваньняў і станаў, узімку, пры гэтым на тле нізкакалярыйнага харчаваньня і ўмеранай колькасьці бялку. Істотна: кетадыета патрабуе дысцыпліны і ўважлівага плана. Эфэкты доўгатэрміновай кетадыеты недастаткова вывучаныя, гэтак жа як і яе ўплыў на працягласьць жыцьця. Часта прыхільнікі кетадыеты робяць шмат памылак, пачынаючы ад выкарыстаньня няякасных тлушчаў да занадта вялікай колькасьці бялку. У цэлым кетадыета хутчэй лекавая працэдура для людзей, якія дакладна разумеюць, дзеля чаго да яе зьвяртаюцца.
 
-Больш тлушчу.
+\subsection{Больш тлушчу.}
 Многія людзі часта разумеюць параду «тлушч не такі й шкодны» як параду есьці больш тлустага. Але проста павелічэньне колькасьці тлушчу бязь іншых зьменаў у харчаваньні прынясе толькі шкоду, бо высакатлушчавыя дыеты з цукрам і канцэнтраванымі вугляводамі адно павялічваюць запаленьне, рызыку атлусьценьня, пагаршаюць мікрафлёру кішачніка і г.д.
