--- a/nutrition/chapter22.tex
+++ b/nutrition/chapter22.tex
@@ -1,35 +1,38 @@
-Правіла 22. Водны балянс
+\chapter{Водны балянс}
 
 Слушны водны балянс важны для здаровага харчаваньня. Піцьцё дастатковай колькасьці вадкасьці дабратворна адбіваецца на рабоце мозгу, цягліцаў, кішачніка ды іншых органаў. Хранічны стрэс, узрост могуць прыводзіць да прытупленьня смагі, што можа выліцца ў спажываньне меншых колькасьцяў вадкасьці. А вось спажываньне «вадкіх калёрыяў» – любых вадкасьцяў, якія месьцяць калёрыі, – зьвязанае з нэгатыўным уплывам на здароўе.
+
 У нашым мозгу ёсьць адмысловая сыстэма, якая кантралюе колькасьць вадкасьці ў арганізьме, нэўроны пітнога цэнтра выдатна кіруюць водным балянсам і смагаю. Пры недахопе вады ў нас узьнікае смага, і вада здаецца нам смачнейшай. А вось калі водны балянс у норме, мы ня хочам піць і вада здаецца нясмачнай. Гэты мэханізм дакладны, і яму можна давяраць. Калі людзі п'юць ваду па сыгналах са спэцыяльнай праграмы на смартфоне, а не калі іх смажыць, мне гэта здаецца крыху дзіўным і ненатуральным.
 
-Як зьявілася праблема?
+\section{Як зьявілася праблема?}
 
 Здавён-даўна селішчы засноўваліся ля крыніцаў пітной вады. У апошнія дзесяцігоддзі пры актыўнай падтрымцы вытворцаў вады стаў укараняцца міт аб неабходнасьці піць вялікую яе колькасьць. Зьявіліся розныя формулы разьліку для здаровых людзей, якія змушаюць іх піць больш воды, чым хочацца, што ня вельмі правільна і карысна. Колькасьць неабходнай вадкасьці – гэта вельмі зьменлівая велічыня. Яна залежыць ад масы цела, тэмпэратуры, вільготнасьці, фізычнай актыўнасьці, дыеты і да т. п. Ёсьць агульная рэкамэндацыя: 30 мл на кіляграм масы цела, прычым гэтая колькасьць улічвае і ваду ў ежы (супы, садавіна і г.д.). Нягледзячы на тое, што часта чую пытаньні накшталт «Доктар, колькі мне напраўду піць вады ў мілілітрах?» – я не сьпяшаюся адказваць канкрэтнай і няслушнай лічбай.
+
 Акрамя таго, людзі пачалі піць не ваду, а вялікую колькасьць напояў, якія ўтрымліваюць калёрыі: гэта і розныя салодкія газіроўкі, сокі, фрэшы, смузі і да т. п. Нават піцьцё гарбаты і кавы суправаджаецца даданьнем вялікіх колькасьцяў цукру, вяршкоў, малака, а дадаткова да такіх «напояў» спажываецца дэсэрт. Такім чынам, людзі пачынаюць піць менш вады, а больш спажываць напояў, што кепска спаталяюць голад.
 
-Як гэта ўплывае на здароўе?
+\section{Як гэта ўплывае на здароўе?}
 
-Абязводжваньне.
+\subsection{Абязводжваньне.}
 Ёсьць даныя, што нават страта вады ў 1-1,3% ад масы цела пагаршае настрой і канцэнтрацыю, павышае рызыку галаўнога болю. Калі страта вады перавышае 2% ад масы цела, зьніжаюцца нашыя фізычныя і кагнітыўныя здольнасьці, мы горш выглядаем. Страта 5% і больш вядзе да парушэньняў тэрмарэгуляцыі, што актуальна для тых, хто жыве ў гарачым клімаце, і спартоўцаў, недахоп больш чым 6-7% прывядзе да моцнай страты трываласьці. Абязводжваньне пагаршае стан скуры, можа справакаваць галаўны боль, парушыць працу страўнікава-кішачнага тракту, зьменшыць разумовыя здольнасьці, узмацніць апэтыт.
 
 Страта вады ў 1-1,3% ад масы цела пагаршае настрой і канцэнтрацыю, павышае рызыку галаўнога болю. Калі страта вады перавышае 2% ад масы цела, зьніжаюцца нашы фізычныя і кагнітыўныя здольнасьці. Страта 5% і больш вядзе да парушэньняў тэрмарэгуляцыі, што актуальна для тых, хто жыве ў гарачым клімаце, і спартоўцаў, недахоп больш чым 6-7% прывядзе да моцнай страты трываласьці.
 
-Дадатковая вадкасьць.
+\subsection{Дадатковая вадкасьць.}
 Так, спажываючы залішнюю колькасьць вадкасьці, можна нашкодзіць свайму здароўю. Часта людзі спрабуюць піць у запас, баючыся абязводжваньня, што можа быць небясьпечна. Дадатковае ўжываньне вадкасьці не ўплывае на зьніжэньне рызыкі захворваньняў (даныя аналізу назіраньняў на 120 тысячах людзей цягам 10 гадоў), залішняя вада нават не спрыяе ўвільгатненьню вашай скуры і не ўплывае на працягласьць жыцьця. Такім чынам, спажываньне вады пры абязводжваньні дапамагае, а вось пітво звыш нормы ані не ўплывае на здароўе, за выключэньнем шэрагу невялікіх рызык.
 
-Вадкія калёрыі.
+\subsection{Вадкія калёрыі.}
 Дасьледаваньні паказваюць, што спажываньне фруктовых сокаў, квасу ды іншых салодкіх вадкасьцяў небясьпечнае для здароўя. У сярэднім у 1 шклянцы фруктовага соку бяз цукру зьмяшчаецца каля 20-23 грамаў цукраў. Хуткасьць усмоктваньня цукру з соку нашмат вышэйшая, чым з цэльнага фрукта: садавіна як такая не дае магчымасьці пераесьці. Арганічныя кіслоты ў соках маскуюць цукар, таму людзі недаацэньваюць рэальную небясьпеку сокаў для здароўя і іх калярыйнасьць. Вадкія калёрыі спрыяюць карыесу (цукар + кіслата), павялічваюць рызыку атлусьценьня, цукровага дыябэту. Салодкія напоі прыводзяць да пагаршэньня работы мозгу і ў маладых людзей, зьніжаюць аб'ём мозгу і павялічваюць рызыку хваробы Альцгеймэра. Шклянка апэльсінавага соку прыгнятае эфэктыўнасьць тлушчаспаленьня на 25%. Устаноўленая карысьць фрукта не пераносіцца аўтаматычна на сок – ужываньне граната зьніжае рызыку разьвіцьця сардэчных хваробаў, а гранатавы сок не валодае падобнымі эфэктамі.
 
-Асноўныя прынцыпы
+\section{Асноўныя прынцыпы}
 
 Піце чыстую ваду, не выкарыстоўвайце сокі, ваду зь мёдам, салодкія газіроўкі, смузі, гарбату, каву для здаволеньня смагі!
-Правіла тэставага глытка: трымайце каля сябе бутэльку.
+
+\subsection{Правіла тэставага глытка: трымайце каля сябе бутэльку.}
 Калі вас раптам засмажыла (ці вам здалося, што гэта смага), то адпіце адзін глыток і спыніцеся. Калі вы адчулі задавальненьне і смага стала выразьнейшай, то піце больш. Самае галоўнае – адчуць эмоцыю пасьля першага глытка. Ключ да правільнага выкарыстаньня гэтага, так напраўду, відавочнага мэтаду – уменьне прыслухоўвацца да сыгналаў уласнага цела, усвядомленасьць.
 
 Арганізм працуе па мэтадзе каліброўкі: спачатку ён папаўняе адразу 50-80% дэфіцыту вадкасьці, а потым павольна дабірае рэшту. Смага зьнікае яшчэ да таго, як вада ўсмоктваецца страўнікам. Такое паступовае аднаўленьне страты вадкасьці больш натуральнае для нас.
 
-Піць пакрысе.
+\subsection{Піць пакрысе.}
 Калі вы п'яце, зьлёгку затрымліваючы ваду, невялікімі глыткамі і смакуючы, то адбываецца больш эфэктыўнае ўхіленьне смагі. Нават калі мы папілі да адсутнасьці смагі, то папоўнілі балянс ня цалкам. Арганізм працуе па мэтадзе каліброўкі: спачатку ён папаўняе адразу 50-80% дэфіцыту вадкасьці, а потым павольна дабірае астатняе. Смага зьнікае яшчэ да таго, як вада ўсмоктваецца страўнікам. Такое паступовае аднаўленьне страты вадкасьці больш натуральнае для нас. Таму не сьпяшайцеся выпіваць адразу велізарную колькасьць вадкасьці, лепей гэта рабіць пакрысе, памяншаючы аб'ёмы выпітага.
 
 Вызначце недахоп вадкасьці. Навучыцеся ідэнтыфікаваць у сябе простыя прыкметы недахопу вады:
@@ -40,56 +43,56 @@
 5. цяглічная слабасьць, павелічэньне частаты пульса;
 6. вы ў стрэсе і не заўважаеце абязводжваньня, зрабіце тэставы глыток.
 
-Як трымацца правіла? Ідэі і парады
+\section{Як трымацца правіла? Ідэі і парады}
 
-Фальшывая смага.
+\subsection{Фальшывая смага.}
 Пры стрэсе павялічваецца актыўнасьць сымпацыйнай нэрвовай сыстэмы, што гняце работу сьлінных залозаў і выклікае адчуваньне перасыханьня ў роце. Пасьля аднаго глытка вады жаданьне піць зьнікае. Увільгатненьне ротавай поласьці прыбірае фальшывую смагу.
 
 Пры стрэсе павялічваецца актыўнасьць сымпацыйнай нэрвовай сыстэмы, што гняце работу сьлінных залозаў і выклікае адчуваньне перасыханьня ў роце. Пасьля аднаго глытка вады жаданьне піць зьнікае. Увільгатненьне ротавай поласьці прыбірае фальшывую смагу.
 
-Прапала смага.
+\subsection{Прапала смага.}
 Смага часта можа зьнікаць, асабліва ва ўмовах хранічнага стрэсу (калі, па лёгіцы арганізму, ужо лепш абязводжваньне, чым страта натрыю). Але тэставы глыток вады актывуе ўтоенае пачуцьцё смагі, і зьяўляецца пачуцьцё задавальненьня.
 
-Не адкладайце ваду далёка.
+\subsection{Не адкладайце ваду далёка.}
 Дасьледаваньні паказваюць, што пры фізычнай дзейнасьці ў гарачым клімаце спартоўцы выпіваюць толькі 50% ад страчанай вадкасьці. Таму трэба пэрыядычна рабіць тэставы глыток, а не адкладаць далёка бутэльку, калі вы адзін раз папілі. Не, адзін раз поўнасьцю дэфіцыт не папоўніць!
 
-Вільготнасьць паветра.
+\subsection{Вільготнасьць паветра.}
 Узімку, калі працуе ацяпленьне і вільготнасьць паветра нізкая, мы губляем з паветрам шмат вадкасьці. Гэта можа прывесьці да дадатковай страты да 500 мл вадкасьці на содні. Сухасьць сьлізьніцаў павялічвае рызыку вострых рэспіраторных захворваньняў. Усталюйце ўвільгатняльнік паветра, падтрымлівайце аптымальную вільготнасьць удома.
 
-Газаваная вада.
+\subsection{Газаваная вада.}
 Газаваная вада (насычаная вуглякіслым газам) мае рознаскіраваныя эфэкты на здароўе. Так, яна можа дапамагаць пры праблемах з кішачнікам, можа зьмяншаць пачуцьцё голаду за кошт павелічэньня аб'ёму ў страўніку. Аднак вялікія яе колькасьці могуць залішне стымуляваць страўнікава-кішачны тракт у чыстых прамежках, што непажадана. Кіслотнасьці газіроўкі не асьцерагайцеся, яна нязначная.
 
-Мінэральны склад вады.
+\subsection{Мінэральны склад вады.}
 Існуюць комплексныя сыстэмы ацэнкі якасьці вады, якія ўлічваюць дзясяткі паказьнікаў. Вылучаюць небясьпечныя для здароўя паказьнікі, якія непажадана перавышаць, карысныя злучэньні, якія патрабуюцца для здароўя. Многія са злучэньняў, нават тыя, што перавышаюць норму, могуць быць карысныя. Напрыклад, больш высокія канцэнтрацыі літыю ў вадзе зьніжаюць рызыку дэпрэсій, суіцыдаў і хваробы Альцгеймэра. Такім чынам, невялікае перавышэньне горных водоў па ўтрыманьні літыю можа быць карысным.
 
-Жорсткасьць вады.
+\subsection{Жорсткасьць вады.}
 Жорсткасьць вады зьвязаная з утрыманьнем у ёй соляў кальцыю і магнію, дыстыляваная вада цалкам ачышчаная ад соляў. Занадта мяккая вада нават небясьпечнейшая, чым жорсткая. Залішняе ўжываньне мяккай вады, у тым ліку дыстыляванай, можа павышаць рызыку сардэчна-сасудзістых захворваньняў і вымываць карысныя мінэралы з арганізму. У рэгіёнах з жорсткай вадой сьмяротнасьць ад сардэчных захворваньняў вышэйшая, а вось на камяні ў нырках і жоўцевым пухіры жорсткая вада ніяк не ўплывае (ёсьць даныя, што нават можа зьмяншаць іх рызыку).
 
-Аналіз вады.
+\subsection{Аналіз вады.}
 Зрабіце аналіз вады ў сябе дома. Памятайце, што на яе якасьць уплывае і сыстэма яе разьмеркаваньня (матэрыял трубаў, яго стан). Пры разбурэньні трубаў шкодныя рэчывы могуць пападаць у ваду.
 
-«Палепшаныя воды».
+\subsection{«Палепшаныя воды».}
 Існуе вялікая колькасьць «карыснай» вады – «шчолачная», «структураваная», «талая», «зараджаная», «вадародная», але яны ня маюць навукова даведзенай карысьці і ў лепшым выпадку бескарысныя. «Цяжкая» і «лёгкая» воды маюць тэарэтычнае абгрунтаваньне магчымага эфэкту, але пакуль няма надзейных дасьледаваньняў іх магчымай эфэктыўнасьці.
 
 Існуюць міты пра ўнікальную карысьць як цёплай, так і халоднай воды, але яны ня маюць навуковага пацверджаньня. Калі вам падабаецца цёплая вада – піце яе з задавальненьнем. Вада пакаёвай тэмпературы – гэта разумны кампраміс.
 
-Прыгожы посуд.
+\subsection{Прыгожы посуд.}
 Трымайце прыгожую шклянку і графін каля сябе. Піць са шклянога і прыгожага посуду бясьпечней і прыемней, чым з плястыкавай бутэлькі.
 
-Кафэінзьмяшчальныя вадкасьці.
+\subsection{Кафэінзьмяшчальныя вадкасьці.}
 Зьвярніце ўвагу, што лішак кафэіну ў гарбаце, каве і г. д. можа мець вялікую колькасьць нэгатыўных аспэктаў, асабліва ў адчувальных да іх людзей – ад бессані да трывожнасьці. Пазьбягайце спажываньня кафэіну пасьля 15:00.
 
-Час дня.
+\subsection{Час дня.}
 Разумна выпіць ваду раніцай (страта вадкасьці ноччу), пасьля фізычнай актыўнасьці, меней піць на ноч.
 
-Прадукты харчаваньня.
+\subsection{Прадукты харчаваньня.}
 Вада ў прадуктах харчаваньня таксама лічыцца. Чым больш вы ясьцё супоў, сакавітай садавіны і гародніны, тым менш вам трэба піць.
 
-Карысьць цёплай вады, карысьць халоднай вады.
+\subsection{Карысьць цёплай вады, карысьць халоднай вады.}
 Існуюць міты пра ўнікальную карысьць як цёплай, так і халоднай воды, але яны ня маюць навуковага пацьверджаньня. Калі вам падабаецца цёплая вада – піце яе з задавальненьнем. Вада пакаёвай тэмпературы – гэта разумны кампраміс.
 
-Вада з дабаўкамі.
+\subsection{Вада з дабаўкамі.}
 Калі звычайная вада нясмачная вам, то можаце дадаць невялікую колькасьць лайму, цытрыны, імберца. Пазьбягайце даданьня калярыйных дабавак накшталт мёду.
 
-Можна піць ваду падчас яды.
+\subsection{Можна піць ваду падчас яды.}
 Вада сьцякае па складках малой крывізны страўніка, а цьвёрдая ежа ў большай ступені знаходзіцца на вялікай крывізьне, таму вада не пагаршае страваваньня. Але часта людзі п'юць, каб аблегчыць жаваньне або хутчэй праглынуць ежу, вось у гэтым выпадку вада відавочна супрацьпаказаная. Шклянка вады перад ежай можа зьменшыць колькасьць зьедзеных калёрыяў у час сталаваньня.
