--- a/nutrition/chapter4.tex
+++ b/nutrition/chapter4.tex
@@ -1,89 +1,93 @@
-Правіла 4. Сьняданак
+\chapter{Сьняданак}
+
 Сняданак – гэта найважнейшы прыём ежы. У ранішні час арганізм заводзіць наш унутраны гадзіньнік і настройвае біярытмы. Тое, як мы пасьнедаем, будзе шмат у чым вызначаць нашае самаадчуваньне і энэргічнасьць днём, голад і сытасьць, а таксама наш настрой і нават сон. Для многіх людзей раніца – гэта час без апэтыту і радасьці, але гэта няправільна. Наладзіўшы сваю раніцу, вы будзеце прачынацца са смакам да жыцьця і добрым апэтытам – і гэта значыць, што вы на слушным шляху да здароўя! Калі мае кліенты сустракаюць раніцу з задавальненьнем і вяртаюць апэтыт, яны хутчэй здаравеюць.
+
 Добры сьняданак дапамагае добра пачаць дзень і захаваць энэргічнасьць да самага вечара! Успомніце, калі вы адпраўляецеся ў падарожжа і бэнзіну мала, вы адразу запраўляе поўны бак, каб затым ехаць спакойна і не баяцца таго, што паліва скончыцца. Пачынаючы дзень, важна папоўніць свае энэргетычныя запасы, каб цягам дня ваш арганізм спраўна функцыянаваў.
 
 Для многіх людзей раніца – гэта час без апэтыту і радасьці, але гэта няправільна. Наладзіўшы сваю раніцу, вы будзеце прачынацца са смакам да жыцьця і добрым апэтытам – і гэта значыць, што вы на слушным шляху да здароўя!
 
-Як зьявілася праблема?
+\section{Як зьявілася праблема?}
+
 Павелічэньне тэмпу жыцьця і адсутнасьць рэжыму дня зрушваюць наш графік, мы вячэраем і кладзёмся спаць пазьней. Позьняя вячэра і ўздым прыводзяць да адсутнасьці часу для гатаваньня сьняданку, і ў нас да таго ж няма апэтыту раніцай. Усё гэта фармуе заганнае кола, і мы ссоўваем гадзіны прыёмаў ежы на ўсё пазьнейшы час. Цяпер увогуле ў сярэднім 30% людзей ня сьнедаюць, многія пераходзяць на позьні сьняданак, а колькасьць ужытых ранкам калёрыяў імкліва зьніжаецца.
 
-Як гэта ўплывае на здароўе?
+\section{Як гэта ўплывае на здароўе?}
 
-Сардэчна-сасудзістыя захворваньні.
+\subsection{Сардэчна-сасудзістыя захворваньні.}
 Навуковыя дасьледаваньні пацьвердзілі, што рэгулярны сьняданак станоўча ўплывае на здароўе сардэчна-сасудзістай сыстэмы і зьніжае рызыку многіх захворваньняў. Адсутнасьць сьняданку прыводзіць да парушэньня ліпіднага профілю крыві, павелічэньня атэрасклератычнай паразы сасудаў. Агульная колькасьць атэрасклератычных бляшак у паўтара разы вышэйшая ў тых, хто прапускае сьняданак. Акрамя таго, павялічваецца рызыка сардэчнага прыступу ды ішэміі сэрца са сьмяротным вынікам.
 
-Атлусьценьне і цукровы дыябэт.
+\subsection{Атлусьценьне і цукровы дыябэт.}
 Сьняданак зьніжае рызыку мэтабалічнага сындрому (атлусьценьне, дыябэт, гіпэртэнзія і да т. п.). Большасьць людзей, якія пакутуюць на атлусьценьне, ня маюць звычкі сьнедаць або зьядаюць за сьняданкам вельмі мала. Тыя, хто рэгулярна сьнедае, маюць на 30% меншую імавернасьць атлусьценьня і ў два разы зьніжаюць рызыку цукровага дыябэту.
 
-Фэртыльнасьць.
+\subsection{Фэртыльнасьць.}
 Сьняданак уплывае нават на разьвіцьцё захворваньняў, якія на першы погляд складана зьвязаць з харчаваньнем. Напрыклад, на полікістоз яечнікаў, што ўзьнікае ў сувязі з інсулінарэзыстэнтнасьцю. Сытны сьняданак і нізкакалярыйная вячэра дапамагаюць павысіць адчувальнасьць да інсуліну і палепшыць гарманальны профіль, падвышаючы шанцы на зачацьце.
 
-Сыстэма «голад – сытасьць».
+\subsection{Сыстэма «голад – сытасьць».}
 Адсутнасьць сьняданку прыводзіць да парушэньня насычэньня і паніжанага кантролю голаду на працягу ўсяго дня. Навукоўцы высьветлілі, што маладыя людзі, якія прапускаюць сьняданак, зьядаюць на 40% больш прысмакаў цягам дня.
 
 Спалучэньне сьняданку зь яркім сонечным сьвятлом, фізычнай актыўнасьцю і прыемным абуджэньнем – гарантыя добрага пачатку дня.
 
-Прадуктыўнасьць, стрэс.
+\subsection{Прадуктыўнасьць, стрэс.}
 Рэгулярны сьняданак спрыяе паляпшэньню канцэнтрацыі ўвагі, стабілізуе ўзровень цукру ў крыві. IQ дзяцей, якія рэгулярна сьнедаюць, вышэйшае. Пры адсутнасьці сьняданку зьмяншаецца наша стрэсаўстойлівасьць, бо раніцай самы высокі ўзровень картызолу, што на тле адсутнасьці ежы павялічвае рызыку разбурэньня цягліц і назапашваньня тлушчу.
 
-Асноўныя прынцыпы
+\section{Асноўныя прынцыпы}
 
 Здаровы сьняданак – гэта рэгулярны, сытны, высокабялковы раньні сьняданак пры дастатковым узроўні асьвятленьня.
+
 Такі сьняданак спрыяе спаленьню тлушчу, пры гэтым мацней выдаткоўваецца менавіта вісцэральны тлушч, а не падскурны (інтэнсіўней зьніжаецца ахоп таліі). Сьняданак дапамагае кантраляваць узровень грэліну, таму вы пачуваецеся сытым на працягу ўсяго дня. Сьняданак стабілізуе ваганьні цукру ў крыві, паляпшае настрой і прадуктыўнасьць. Спалучэньне сьняданку зь яркім сьвятлом, фізычнай актыўнасьцю і прыемным абуджэньнем зьяўляецца гарантыяй добрага пачатку дня. Бо менавіта раніца крытычна важная для нашага здароўя: яна дазваляе перазагрузіць, наладзіць і сынхранізаваць працу цыркадных рытмаў.
 
-Высокабялковы сьняданак.
+\subsection{Высокабялковы сьняданак.}
 Высокабялковыя прадукты на сьняданак засвойваюцца і насычаюць лепей, чым у любы іншы прыём ежы. Так, сньяданак з двух яйкаў паказаў сябе лепш, чым аналягічная па калёрыях колькасьць вугляводаў. Пасьля сьняданку з падвышанай колькасьцю бялку моладзь ела на вячэру на 200 ккал менш, а на працягу дня не адчувала жаданьня чым-небудзь перакусіць. Сьняданак павінен утрымоўваць 50-80 грамаў якаснага бялку і дастатковую колькасьць тлушчаў. Вугляводы на сьняданак павінны складаць меншую долю калёрыяў, кашу варта замяніць гароднінай.
 
-Сытны па аб'ёме (breakfast diet).
+\subsection{Сытны па аб'ёме (breakfast diet).}
 Сьняданак павінен складаць больш за 30% аб'ёму сутачнага спажываньня калёрыяў. Ухапіць кавалачак чаго-небудзь з кавай ня лічыцца паўнавартасным сьняданкам. Важнасьць сытнага сьняданку – гэта факт, які знайшоў адлюстраваньне ня толькі ў навуковых дасьледаваньнях, але і ў традыцыйнай мудрасьці: «Сьняданак – золата, абед – срэбра, вячэра – медзь», «Сьняданак зьеж сам, абедам падзяліся зь сябрам, а вячэру аддай ворагу» , «Сьнедай як кароль, вячэрай як жабрак» і шматлікія іншыя.
 
-Раньні сьняданак. 
+\subsection{Раньні сьняданак.}
 Сьнедаць трэба ў першую гадзіну пасьля абуджэньня. Каб пасьпяваць, вы мусіце прыгатаваць усё зь вечара. Прачнуліся – уключайце пліту і займайцеся ранішнімі справамі.
 
 Паўгадзіны сонечнага сьвятла раніцай – гэта навукова абгрунтаваная, эфэктыўная працэдура для здаровай працы цыркадных рытмаў. Зімой можна сьнедаць з уключанымі яркімі лямпамі для фотатэрапіі.
 
-Яркі сьняданак. 
+\subsection{Яркі сьняданак.}
 З самае раніцы трэба ўключаць яркае сьвятло, якое зьнізіць узровень мэлятаніну і картызолу. Ранішняе сьвятло павялічвае адчувальнасьць да інсуліну і, як вынік, спрыяе пахудзеньню. Сонечнае сьвятло палепшыць настрой і павялічыць выпрацоўку дафаміну, бо дафамінавыя нэўроны ёсьць і ў сятчатцы вока, дзе ўтвараюць асаблівую рэтына-дафамінавую сыстэму. Паўгадзіны сонечнага сьвятла раніцай – гэта навукова абгрунтаваная, эфэктыўная працэдура для здаровай працы цыркадных рытмаў. Зімой можна сьнедаць з уключанымі яркімі лямпамі для фотатэрапіі.
 
-Як трымацца правіла? Ідэі і парады
+\section{Як трымацца правіла? Ідэі і парады}
 
-Хуткі сьняданак.
+\subsection{Хуткі сьняданак.}
 У ідэале плянуйце такі сьняданак, каб прыгатаваць яго за 10-15 хвілінаў. Складаныя стравы, прадукты з працяглым часам гатаваньня не пасуюць. Актыўна выкарыстоўвайце спэцыі і травы, каб надаць яркасьці звыклым прадуктам.
 
-Прачынайцеся лёгка.
+\subsection{Прачынайцеся лёгка.}
 Лёгкае і прыемнае ранішняе абуджэньне – гэта важная прыкмета моцнага здароўя. Усталюйце на будзільнік прыемную мэлёдыю з паступовым павелічэньнем гучнасьці. Увечары візуалізуйце час абуджэньня, няхай лічбы застануцца ў вас у памяці. Прайграйце некалькі разоў у галаве працэс абуджэньня, як вы лёгка прачынаецеся за пяць хвілінаў да сыгналу будзільніка і адчуваеце сябе выдатна. Сфакусуйцеся на прадчуваньні ад прыемнага абуджэньня.
 
-Няма апэтыту.
+\subsection{Няма апэтыту.}
 Пры адсутнасьці апэтыту раніцай рабіце лёгкую вячэру ці зусім прапускайце яе. Часам пры парушэньні сыстэмы «голад – сытасьць» раніцай апэтыту няма, але па меры нармалізацыі вашага стану апэтыт будзе прыходзіць.
 
-Прачынайцеся заўсёды ў адзін час.
+\subsection{Прачынайцеся заўсёды ў адзін час.}
 І ў працоўны, і ў выходны дзень прачынайцеся ў аднолькавы час. Ваша цела абвыкне абуджацца ў правільнай фазе сну, і вам будзе лягчэй уставаць. Можна паэкспэрымэнтаваць, ссоўваючы час абуджэньня на 10-20 хвілінаў у абодва бакі. А што рабіць, калі трэба выспацца? Усё проста: кладзіцеся раней спаць на наступны дзень. Гэтае проста правіла: прачынаецеся ў адзін час, засынаеце, калі захацелася.
 
-Выкарыстоўвайце сьветлавы будзільнік.
+\subsection{Выкарыстоўвайце сьветлавы будзільнік.}
 Сьветлавы будзільнік плыўна павышае яркасьць сьвятла, і вы прачынаецеся лёгка і хутка. Гэта добры і карысны спосаб, не такі траўматычны, як гучны будзільнік.
 
-Выйдзіце на сонца.
+\subsection{Выйдзіце на сонца.}
 Кароткі шпацыр або прабежка на вуліцы пад сонцам выдатна наладзяць вас і вернуць апэтыт. Цудоўна, калі ў вас ёсьць сабака! Памятайце, што сонечнае сьвятло – гэта дзівосная крыніца здароўя і даўгалецьця, выкарыстоўвайце любую магчымасьць пабываць пад сонцам, асабліва раніцай!
 
 Сьветлавы будзільнік плыўна павышае яркасьць сьвятла, і вы прачынаецеся лёгка і хутка. Гэта добры і карысны спосаб, не такі траўматычны, як гучны будзільнік.
 
-Выкарыстоўвайце тэмпэратурны будзільнік.
+\subsection{Выкарыстоўвайце тэмпэратурны будзільнік.}
 Тэмпэратура таксама зьяўляецца сыгналам для нашых унутраных гадзінаў. Уначы тэмпэратура падае, і сасуды скуры звужаюцца, у мозг трапляе больш крыві, і мы лягчэй прачынаемся. Зрабіце меншым ацяпленьне на ноч – і ранкам прачняцеся ў прыемнай і бадзёрай прахалодзе. Падвышэньне тэмпэратуры з дапамогай водных працэдур і зарадкі дапаможа вам зарадзіцца энэргіяй і лягчэй прачнуцца. Разнасьцежце вокны, выйдзіце на балькон, абліцеся вадой.
 
-Нагуляць апэтыт.
+\subsection{Нагуляць апэтыт.}
 Зрабіце інтэнсіўную зарадку, але не даўжэй за 20 хвілінаў. Халодны душ са старанным расьціраньнем цела, заняткі спортам на сьвежым паветры добра падвышаюць апэтыт.
 
-Шклянка вады.
+\subsection{Шклянка вады.}
 Выпіце шклянку вады пасьля абуджэньня. За ноч вы страцілі крыху вадкасьці, зараз самы час аднавіць водны балянс.
 
-Пазьбягайце канцэнтраваных вугляводаў.
+\subsection{Пазьбягайце канцэнтраваных вугляводаў.}
 Дапускаюцца нізкавугляводныя гародніна і зеляніна: капуста, салера, шпінат, цыбуля і г. д. У звычайным варыянце можна разгледзець сярэднекрухмалістую гародніну. Непажадана рабіць сьняданак з адной толькі кашы, няхай і карыснай, ня кажучы ўжо пра макарону.
 
-Прадоўжыце сытасьць да абеду.
+\subsection{Прадоўжыце сытасьць да абеду.}
 Для прадаўжэньня сытасьці выкарыстоўвайце тлушчы. У ідэале ваш сьняданак павінен быць такім, каб думкі аб ежы не прыходзілі вам у галаву да абеду. Для прадаўжэньня сытасьці дадавайце тлушчы: сьметанковае масла, какосавы, аліўкавы алей, ялавічны тлушч.
 
-Дэсэрт на сьняданак.
+\subsection{Дэсэрт на сьняданак.}
 На дэсэрт разгледзьце авакада, гарэхі, кавалачкі какосу, ягады, садавіну. Гарэхі выдатна насычаюць і добра пасуюць да гарбаты і кавы.
 
-Аўсянка, сэр.
+\subsection{Аўсянка, сэр.}
 Насуперак мітам, ангельскі сьняданак – гэта не аўсянка, а яйкі, бекон і фасолю, т. Е. высокабялковыя прадукты. Многія вытворцы шматкоў актыўна іх прасоўваюць, але кашы на сьняданак - гэта не самае лепшае рашэньне, так як іх не хапае для кантролю апэтыту і энэргіі да самага абеду.
