--- a/nutrition/chapter7.tex
+++ b/nutrition/chapter7.tex
@@ -1,125 +1,128 @@
-Правіла 7. Ежце, калі галодныя
+\chapter{Ежце, калі галодныя}
 
 Калі я кажу пра карысьць голаду, шмат хто палохаецца. І дарма, бо здаровы голад нам ня вораг, а супольнік. Здаровы фізыялягічны апэтыт – гэта больш, чым проста жаданьне есьці. Здаровае жаданьне есьці – гэта прыкмета здароўя, прыкмета «смаку да жыцьця». Тое, што мы называем пачуцьцём невялікага, лёгкага голаду, – гэта абсалютна нармальны, натуральны стан чалавека. Для правільнага абмену рэчываў, добрага самаадчуваньня і здаровых харчовых паводзінаў важна выконваць простае правіла: есьці, калі вы галодныя, і есьці дасхочу. Нягледзячы на ўяўную простасьць, гэтае правіла мае мноства нюансаў.
+
 Пераборлівасьць у ежы і паўнавартасныя сталаваньні адлюстроўваюць добрую работу сыстэмы «голад – сытасьць», у аснове якой ляжыць балянс двух гармонаў, грэліну і лептыну. Пры гэтым важна разумець, што слова «голад» зьяўляецца вельмі недакладным, бо ёсьць суплётам розных фізыялягічных зьяваў. Мы можам вылучыць як мінімум тры розныя зьявы: апэтыт (3-5 гадзінаў, вычарпаньне глікагену), устрыманьне (пост, фастынг [5], да 70 гадзінаў) і сапраўдны голад (выяўныя гарманальныя зьмены).
 
 Лёгкі голад – гэта натуральны стан здаровага, актыўнага чалавека. Для правільнага абмену рэчываў, добрага самаадчуваньня і здаровых харчовых паводзінаў важна выконваць простае правіла: есьці, калі вы напраўду галодныя, і есьці дасхочу.
 
 Навучыцеся ставіцца да голаду як да сыгналу. Уявіце сабе, што вы едзеце машынай, і раптам у вас загараецца чырвоны індыкатар бэнзабаку. Вы ж ня цісьніце газ у падлогу і не зрываецеся ў бліжэйшую запраўку, кінуўшы ўсе справы? У вас ёсьць запас яшчэ 50-100 кіламетраў, можна дарабіць справы і тады ўжо заехаць на запраўку. Так і голад – гэта сыгнал, што ўзровень глікагену ў печані зьніжаецца: зазвычай хочацца есьці, калі застаецца яшчэ 20% запасу энэргіі. Таму цалкам можна гадзіну-паўтары пачакаць і потым добра пад'есьці. Але калі вы будзеце ігнараваць голад, то ён можа папрасіць і гвалтам, павялічыўшы ўзровень стрэсавага гармону картызолу. Таму прыслухоўвайцеся да сыгналаў!
 
-Як зьявілася праблема?
+\section{Як зьявілася праблема?}
 
-Сквапныя гены.
+\subsection{Сквапныя гены.}
 Сучасную эпідэмію атлусьценьня і пераяданьня навукоўцы апісваюць «тэорыяй сквапных генаў». Даўным-даўно, калі ежы было вобмаль, важнай для выжываньня нашых продкаў стратэгіяй было зьесьці ў запас калярыйную ежу, бо захоўваць і насіць яе з сабой было складана. Цяпер актыўнасьць гэтых «сквапных генаў» стымулюе пераяданьне, бо мы выпрабоўваемся сталым сэнсарным бамбаваньнем высокакалярыйнай ежай, што смачна пахне і апэтытна выглядае (фуд-порна), а ва ўмовах стрэсу яна становіцца асабліва прывабнай.
 
-Стрэс і ежа.
+\subsection{Стрэс і ежа.}
 Галоўнай праблемай выжываньня для нашых продкаў быў голад, таму ў выпадку хранічнага стрэсу наш апэтыт павялічваецца. Так ужо атрымалася, што грэлін павялічваецца пры стрэсе. Таму псыхалягічны стрэс без належнага кантролю правакуе пераяданьне. Высокакалярыйная ежа выклікае ўздым дафаміну, замацоўваючы падобныя паводзіны і «палягчаючы» стрэс. Атрымліваецца, што мы ежай падмацоўваем сваю стрэсавую яду і так трапляем у заганнае кола яшчэ зь дзяцінства. Пры стрэсе ўзровень грэліну падвышаецца, што штурхае нас на пошук рэсурсаў і рашэньняў нашых праблем. Так, мы становімся больш раздражняльнымі і рэзкімі, але гэта дапамагае нам лепей вырашаць праблемы і нават узмацняе «волю да жыцьця». Але, на жаль, стрэсавае павышэньне грэліну часта прыводзіць да таго, што мы проста ямо, а не вырашаем нашы праблемы. А атлусьценьне – гэта не проста лішнія кіляграмы, але часта і страта «смаку да жыцьця».
 
-Разбалянсаваны голад.
+\subsection{Разбалянсаваны голад.}
 Калі мы выкарыстоўваем ежу не па прызначэньні (здавальненьне фізычнага голаду), а зь іншымі мэтамі (заткнуць дзіця, супакоіцца, падняць настрой, заесьці стрэс), то мы руйнуем натуральную зьвязку «голад – ежа», пачуцьцё голаду пачынае асацыявацца зусім зь іншымі трыгерамі, напрыклад «стрэс (нуда) – ежа». Такі ж эфэкт мае ежа строга па раскладзе, без увагі на апэтыт. Прымушаць есьці сябе ці іншага – гэта няправільна!
 
 Голад – гэта сыгнал, што ўзровень глікагену ў печані зьніжаецца, звычайна хочацца есьці, калі застаецца яшчэ 20% запасу энэргіі. Таму цалкам можна пачакаць гадзіну-паўтары і затым добра падсілкавацца.
 
-Як гэта ўплывае на здароўе?
+\section{Як гэта ўплывае на здароўе?}
 
-Голад і смак.
+\subsection{Голад і смак.}
 Як сьцьвярджае народная мудрасьць, «голад – найлепшая закраса». Грэлін павялічвае дафамінавы водгук на звычайныя прадукты, прыкметна ўзмацняючы задавальненьне ад ежы. Таму, калі мы галодныя, звычайная ежа здаецца нам вельмі смачнай і ямо мы яе з задавальненьнем. І тут узьнікае пытаньне і частая асьцярога: калі голад узмацняе смак ежы, ці ёсьць рызыка пераесьці? Людзі баяцца, што, «нагуляўшы апэтыт», яны зьядуць лішку. Так, грэлін павялічвае колькасьць зьедзенага пажытку, але робіць гэта ён павялічваючы частату прыёмаў ежы, а ня разавы аб'ём. Бо грэлін выпрацоўваецца сьценкамі страўніка, таму, калі вы зьядаеце дастатковы аб'ём ежы (уключаючы гародніну і зеляніну) і датрымліваецеся выразнага рэжыму харчаваньня, то падставаў баяцца грэліну ў вас няма.
 
-Грэлін і галаўны мозг.
+\subsection{Грэлін і галаўны мозг.}
 Сэнс дзеяньня гармону голаду грэліну – не пазбавіць вас сілаў, а, наадварот, прастымуляваць, каб вы змаглі рухацца хутчэй і лепей цяміць. Менавіта таму грэлін мае вялікую колькасьць карысных дзеяньняў. Так, ён стымулюе выдзяленьне самататропнага гармону (гармон голаду), які, у сваю чаргу, стымулюе аўтафагію.
 
 Вельмі дабратворна ўзьдзейнічаюць голад і грэлін на працу галаўнога мозгу. Грэлін стымулюе выпрацоўку нэўратрафічнага чыньніка BDNF, нэўрагенэз, дапамагае абараніць мозг ад старэньня. Голад паляпшае памяць, здольнасьць вучыцца («поўнае бруха да навукі глуха»), падтрымлівае нармальную працу гіпакампу, зьніжае рызыку разьвіцьця нэўрадэгенэратыўных захворваньняў, у тым ліку хваробаў Паркінсана і Альцгеймэра. Важным зьяўляецца і антыдэпрэсіўнае дзеяньне грэліну. Так, голад прыкметна зьніжае рызыку дэпрэсіі і стымулюе «пошук навізны», выдзяленьне дафаміну і захаваньне «смаку да жыцьця». Калі ўвесьці грэлін экспэрымэнтальным жывёлам, то яны актыўней пачынаюць дасьледаваць ды імкнуцца вывучаць новае; у чалавека – усё тое ж самае.
 
-Голад і матывацыя.
+\subsection{Голад і матывацыя.}
 Грэлін узмацняе ня толькі імкненьне да ежы, але і ў цэлым «матывацыю». На жывёлах дакладна даведзена: чым больш грэліну, тым больш гатовая жывёла працаваць для атрыманьня ўзнагароды. Больш грэліну – больш матывацыі!
 
 Павелічэньне ўзроўню гармону голаду грэліну паляпшае памяць, падтрымлівае нармальную працу гіпакампу, зьніжае рызыку разьвіцьця нэўрадэгенэратыўных захворваньняў, узьдзейнічае як антыдэпрэсант. Менавіта голад прыкметна зьніжае рызыку дэпрэсіі і стымулюе «пошук навізны», выдзяленьне дафаміну і захаваньне «смаку да жыцьця».
 
-Голад і імунітэт.
+\subsection{Голад і імунітэт.}
 Шмат хто ведае, што пры хваробах (траўмы, інфэкцыі, пухліны ды інш.) зьнікае апэтыт, і гэта заканамерна, а вось вяртаньне апэтыту зьяўляецца добрай прагнастычнай прыкметай. Аказалася, што грэлін здольны ўплываць на імунную функцыю, зьніжаючы ўзровень запаленьня і стымулюючы рост лімфоіднай тканкі. Грэлін і самататропны гармон аказваюць супрацьзапаленчае ўзьдзеяньне, а вось лептын і інсулін – пераважна празапаленчае. Грэлін дапамагае пры шматлікіх аўтаімунных захворваньнях, падтрымлівае нармальную працу тымусу (вілавіцы – вілаватай залозы) і нармальную выпрацоўку імунных клетак.
 
 Вядома, голад мае і шмат чорных бакоў. Калі мы прапускаем прыёмы ежы падчас інтэнсіўнай стрэсавай працы, то наш арганізм бярэ патрэбную для сябе энэргію «гвалтам», павялічваючы ўзровень картызолу, разбураючы цягліцы і выклікаючы ператамленьне. Грэлін, зь яго стымуляцыяй дзеяў, таксама мае нэгатыўныя бакі. Так, падвышаны грэлін можа штурхаць на «пошук навізны», павялічваючы рызыку наркаманіі і рызыкоўных паводзінаў. Таму тым, хто выходзіць з залежнасьці, важна трымацца правіла: пазьбягаць «HALT» (hungry, angry, lonely, tired – галодны, злы, самотны, стомлены), не галадаючы залішне.
 
-Асноўныя прынцыпы
+\section{Асноўныя прынцыпы}
 
 Правіла гучыць так: еж, калі напраўду галодны, да пачуцьця сапраўднага насычэньня.
+
 Таму цалкам заканамерна і лягічна ставіць абед і вячэру такім чынам, каб да іх часу ўжо было пачуцьцё голаду.
 
-Гнуткасьць у абедзе і вячэры.
+\subsection{Гнуткасьць у абедзе і вячэры.}
 Голад – гэта сыгнал гатоўнасьці прымаць ежу. Гэтае правіла, вядома, можа быць трохі нязвыклым, калі мы ўвесь час чуем: «Сядай бяз голаду, уставай бяз сытасьці». Такім чынам, для выкананьня гэтага правіла варта «нагуляць апэтыт» і «не перабіваць апэтыту».
 
-«Нагуляць апэтыт».
+\subsection{«Нагуляць апэтыт».}
 Гэта працяглыя прамежкі паміж прыёмамі ежы. Сапраўдны голад не ўзьнікае імгненна, ён зьяўляецца паступова, па меры выкарыстаньня запасаў глікагену ў цягліцах і печані. Імгненнае ўзьнікненьне жаданьня нешта зьесьці – гэта прыкмета голаду на глебе стрэсу.
 
-«Не перабіваць апэтыту».
+\subsection{«Не перабіваць апэтыту».}
 Не перакусваць. Гэта важна, бо нават невялікі перакус («каліўца ў рот укінуць») можа прывесьці да падзеньня ўзроўню грэліну і прытупленьня пачуцьця голаду. Гэты прынцып выкарыстоўваецца ў дробавым харчаваньні, якое я не рэкамэндую. Для звычайнай працы сыстэмы «голад – сытасьць» нам важны добры апэтыт да моманту прыёму ежы. Часта людзі перабіваюцца перакусамі, спажываючы мала калёрыяў, замест таго каб паўнавартасна паесьці. Такая стратэгія можа прывесьці як да недаяданьня, так і да пераяданьня. Пастаянныя перакусы ствараюць падвышаную нагрузку на страўнікава-кішачны тракт – ад зубоў да стрававальных залозаў.
 
 Сапраўдны голад не ўзьнікае імгненна, ён зьяўляецца паступова, па меры выкарыстаньня запасаў глікагену ў цягліцах і печані. Імгненнае ўзьнікненьне жаданьня нешта зьесьці – гэта прыкмета голаду на глебе стрэсу.
 
-«Апэтыт прыходзіць у час яды».
+\subsection{«Апэтыт прыходзіць у час яды».}
 Узровень грэліну прыкметна павялічваецца, калі мы ўжо садзімся за стол. Выгляд ежы, яе пах яшчэ мацней стымулююць апэтыт. Паўза перад ядой разабраная асобна (гл. разьдзел «Паўза перад ядой»). У здаровых людзей узровень гармону голаду грэліну максымальны нашча, пасьля пачатку яды (праз 20 хвілінаў), затым зьніжаецца на 35-55% і захоўваецца на такім узроўні дзьве-чатыры гадзіны. Пад рэзыстэнтнасьцю да грэліну (зьніжэньне адчувальнасьці) разумеюць недастатковае зьніжэньне грэліну плязмы пасьля прыёму ежы, звычайна гэта зьвязана і з парушэньнямі апэтыту.
 
-Адрозьнівайце эмацыйны і фізычны голад.
+\subsection{Адрозьнівайце эмацыйны і фізычны голад.}
 Фізычны голад узьнікае паступова пасьля яды, вы хочаце зьесьці любую ежу, і яна ўся здаецца прывабнай. Фізычны голад хоць і настойлівы, але яго лёгка адкласьці на гадзіну-другую, пацярпець. У адказ на фізычны голад вам хочацца есьці шмат, а паеўшы, вы адчуваеце палёгку, задаволенасьць, голад зьнікае.
 
 Эмацыйны голад узьнікае раптоўна, часта не зьвязаны з прыёмам ежы, адразу прыходзіць дастаткова інтэнсіўны.
+
 Ён захоплівае ўвагу, патрабуе хуткага задавальненьня. Пры гэтым вам хочацца есьці менавіта спэцыфічную страву (тлустую, вострую, хрумсткую: піцу, чыпсы, цукеркі і да т.п.), але ня шмат, а «кавалачак». Пры гэтым звычайныя стравы вам есьці ня хочацца. Часта, наеўшыся ў адказ на эмацыйны голад, мы атрымліваем посмак у выглядзе напругі, шкадаваньня і агіды. Важна разумець, што каўбасой мы ня вырашым пытаньне эмацыйнага голаду. А вось тэхнікі ўсьвядомленасьці, узяцьця чагосьці пад кантроль, тэхнікі рэляксацыі дапамогуць зьнізіць напал эмацыйнага голаду.
 
-Кантралюйце апэтыт.
+\subsection{Кантралюйце апэтыт.}
 Кантроль голаду – гэта найважнейшая ўмова для доўгатэрміновага выкарыстаньня любой дыеты. Калі голад ня ўзяты пад кантроль, то наўрад ці вы зможаце прытрымлівацца яе ў доўгатэрміновай пэрспэктыве. У ідэале схэма харчаваньня павінна выбудоўвацца наступным чынам: сытны сьняданак, такі, каб яго хапіла да абеду і зьявіўся апэтыт на абед. Добры абед, каб вы былі сытыя да вячэры, але на вячэру быў апэтыт. Вячэра такая, каб вам яе хапіла да сну. Для гэтага важна кантраляваць свой голад, калі ён узьнікае, і старанна яго задавальняць, каб сытасьці вам хапала надоўга.
 
-Ежце ўволю.
+\subsection{Ежце ўволю.}
 Як мы з вамі ведаем, насычэньне лепей за ўсё ўспрымаецца на фоне папярэдняга голаду. Грэлін хутка зьніжаецца пасьля 20 хвілінаў прыёму ежы і на 2-4 гадзіны. Таму насычэньне – гэта зьнікненьне голаду, і гэта самы надзейны індыкатар насычэньня. «Больш ня лезе» – гэта ўжо сымптом пераяданьня, а не фізыялягічнай сытасьці. Насычэньне – гэта шматузроўневы працэс, які ўключае этап цэфалічнага (мазгавога) насычэньня пры выглядзе і паху ежы, мэханічны этап (стымуляцыя мэханарэцэптараў страўніка), кішачны (усмоктваньне глюкозы і амінакіслотаў), дзеяньне гармонаў (гастраінтэстынальны пэптыд, халецыстакінін і інш.) і яшчэ шэраг мэханізмаў. Чым больш мы задзейнічалі розных мэханізмаў насычэньня, тым хутчэй яно надыходзіць. Асобна варта адрозьніваць сытасьць – падтрыманьне насычэньня на працягу часу. Сытасьць падтрымліваецца дзякуючы вугляводам зь ніжэйшым глікемічным індэксам (напрыклад, бабовыя), распушчальнай вязкай клятчатцы (багавіньне, гародніна, садавіна), бялкам і да т. п. Выбар правільных прадуктаў – гэта ключ да кантролю насычэньня і сытасьці.
 
 Эмацыйны голад захоплівае ўвагу, патрабуе хуткага задавальненьня. Пры гэтым вам хочацца есьці менавіта спэцыфічную страву (тлустую, вострую, хрумсткую: піцу, чыпсы, цукеркі і да т.п.), але ня шмат, а «кавалачак». Звычайныя стравы вам есьці не хочацца. Часта, наеўшыся ў адказ на эмацыйны голад, мы атрымліваем посмак у выглядзе напругі, шкадаваньня і агіды.
 
-Як трымацца правіла? Ідэі і парады
+\section{Як трымацца правіла? Ідэі і парады}
 
-Фальшывы голад.
+\subsection{Фальшывы голад.}
 Важна адрозьніваць праўдзівы фізыялягічны і фальшывы голад. Фальшывы голад можа быць зьвязаны са стрэсам, стомленасьцю, недасыпам, нэгатыўнымі эмоцыямі і многімі іншымі нехарчовымі аспэктамі. Стрэс павялічвае ўзровень грэліну. Ежа ў гэтым выпадку шкодзіць фігуры і ніяк не спрыяе рашэньню эмацыйнай праблемы, а часьцяком адно пагаршае яе.
 
-Недасыпаньне.
+\subsection{Недасыпаньне.}
 Дэфіцыт сну, няякасны сон прыводзяць да зьніжэньня ўзроўню гармону сытасьці лептыну і павышэньня ўзроўню грэліну, гармону голаду. Адна гадзіна недасыпаньня можа прывесьці да пераяданьня на наступны дзень да 250 ккал: чым меней вы сьпіце, тым, імаверна, болей зьясьцё на наступны дзень. Таму сьпіце добра, якасны сон – важны крок на шляху кантролю голаду!
 
-Гіпадынамія.
+\subsection{Гіпадынамія.}
 Пастаяннае сядзеньне (нават у зручным або эрганамічным крэсьле) нэгатыўна ўплывае на ўзровень стрэсу і шкодзіць абмену рэчываў. Працяглае сядзеньне і дэфіцыт руху ўзмацняюць голад, а вось нават невялікая актыўнасьць (праца стоячы, хада, уздым па лесьвіцы) спрыяюць лепшаму кантролю голаду. Часьцей рабіце невялікія перапынкі і рухайцеся!
 
 Дэфіцыт сну, няякасны сон прыводзяць да зьніжэньня ўзроўню гармону сытасьці лептыну і павышэньню ўзроўню грэліну. Адна гадзіна недасыпаньня можа прывесьці да пераяданьня на наступны дзень да 250 ккал! Чым менш вы сьпіце, тым больш зьясьцё на наступны дзень. Таму сьпіце добра, якасны сон – важны крок на шляху кантролю голаду!
 
-Абязводжваньне.
+\subsection{Абязводжваньне.}
 Смагу мы часта прымаем за голад. Дастаткова бывае выпіць усяго глыток вады, каб зразумець розьніцу (гл. разьдзелы «Водны балянс», «Балянс натрый – калій»).
 
-Гарманальныя зьмены.
+\subsection{Гарманальныя зьмены.}
 Часта прычынай зьменаў апэтыту зьяўляюцца пэўныя гарманальныя зьмены. Так, зьніжэньне адчувальнасьці да інсуліну (інсулінарэзыстэнтнасьць), зьніжэньне адчувальнасьці да лептыну (лептынарэзыстэнтнасьць), парушэньні працы палавых гармонаў могуць прыкметна ўзмацняць апэтыт. Мэтабалічная жорсткасьць – частая прычына падвышанага голаду (гл. разьдзел «Мэтабалічная гнуткасьць і цыркадная сынхранізацыя»).
 
-Рэчывы, якія перашкаджаюць насычэньню.
+\subsection{Рэчывы, якія перашкаджаюць насычэньню.}
 Існуе шмат рэчываў, якія могуць стымуляваць пераяданьне і тармазіць насычэньне. Да іх адносяцца соль (натрый), узмацняльнікі смаку, араматызатары, цукразамяняльнікі, цукар, рэчывы, якія ўтвараюцца пры вэнджаньні і смажаньні. Лішак натрыю стымулюе апэтыт і пераяданьне, паменшыце колькасьць солі ў ежы – і вы будзеце есьці менш, нават вады вам спатрэбіцца менш. Нават звычайныя араматызатары, у якіх няма калёрыяў, стымулююць голад і могуць прымусіць вас зьесьці на 10% больш, чым вы б зьелі бязь іх. Цукразамяняльнікі пры працяглым выкарыстаньні павялічваюць голад і цягу да салодкага, зьніжаюць сытасьць. Адмоўцеся ад іх выкарыстаньня на рэгулярнай аснове. Спалучэньне «тлушч і цукар» найбольш эфэктыўна разбурае насычэньне і распальвае апэтыт.
 
-Спэцыі.
+\subsection{Спэцыі.}
 Горкі, востры, кіслы смакі, вострыя закрасы могуць тармазіць апэтыт і спрыяць лепшаму насычэньню. Акрамя гэтага, спэцыі ўтрымліваюць велізарную колькасьць біялягічна актыўных рэчываў, нікчэмную колькасьць калёрыяў. Таму даданьне спэцыяў і закрасаў – гэта важны элемэнт здаровага харчаваньня. Спэцыі паляпшаюць насычэньне рознымі спосабамі: больш стымуляцыі, больш горкага, мацней жоўцеаддзяленьне, робіцца лепшай маторыка, шчыльнейшым – сэнсарны «ўсьвядомлены кантакт» зь ежай. У сярэднім чалавек зьядае на 200 ккал меней ежы са спэцыямі.
 
-Клятчатка і зеляніна.
+\subsection{Клятчатка і зеляніна.}
 Клятчатка (у першую чаргу распушчальная) – гэта найважнейшы кампанэнт, які забясьпечвае доўгатэрміновае насычэньне і яшчэ шэраг вельмі карысных уласьцівасьцяў. Болей за ўсё клятчаткі ў зеляніне, гародніне, багавіньні. Ужывайце клятчатку не ў парашках, а ў складзе цэльных прадуктаў, дамагайцеся яе максымальнай разнастайнасьці – гэта карысна для мікрафлёры. Зеляніна месьціць шэраг біялягічна актыўных рэчываў, якія падтрымліваюць сытасьць.
 
 Спэцыі ўтрымліваюць велізарную колькасьць біялягічна актыўных рэчываў і нікчэмную колькасьць калёрыяў, гэта важны элемэнт здаровага харчаваньня. У сярэднім чалавек зьядае на 200 ккал менш ежы са спэцыямі.
 
-Паважайце ежу.
+\subsection{Паважайце ежу.}
 Чым болей вы ведаеце пра ежу і ўпэўненыя, што яна вас насыціць, тым даўжэйшым будзе пачуцьцё сытасьці.
 
-Бялок.
+\subsection{Бялок.}
 Бялок – гэта выдатны нутрыент, які забясьпечвае доўгае пачуцьцё насычэньня. Таму ежце бялок першым у час сталаваньня, дадавайце яго для кантролю сытасьці.
 
-Тлушчы.
+\subsection{Тлушчы.}
 Тлушчы спрыяюць сытасьці, павялічваючы выпрацоўку халецыстакініну. Але праблема для таго, хто худнее, у іх высокай калярыйнасьці. Аптымальнае спажываньне тлушчаў альбо зь бялкамі (у цэльным складзе рыбы ці мяса), альбо ў выглядзе салаты зь зелянінай і гароднінай.
 
-Нармалізацыя голаду.
+\subsection{Нармалізацыя голаду.}
 Пры пахудзеньні ўзровень грэліну і адчувальнасьць да яго расьце, што часта зьяўляецца прычынай адскоку і зваротнага набору вагі. Таму плыўнасьць працэсу зьмяншае гэтыя рызыкі. На жаль, гэты працэс у людзей вельмі працяглы. Так, пахуданьне на 8,5% ад масы цела і падтрыманьне гэтай вагі  цягам паўгоду выявіла наступнае: паўгоду грэлін расьце, пакуль чалавек худнее, і потым застаецца яшчэ паўгоду павышаным, а ўжо затым прыходзіць у норму.
 
-Не магу адрозьніць від голаду.
+\subsection{Не магу адрозьніць від голаду.}
 Ёсьць простае працоўнае рашэньне: калі вы ня можаце зразумець, адчуваеце вы эмацыйны ці фізыялягічны голад, то тады ня ежце. Ня ўпэўнены – ня еж!
 
-Стварыце багацьце.
+\subsection{Стварыце багацьце.}
 Сам факт багацьця, раскашаваньня ва ўсім, пачынаючы ад падзякі навакольным людзям, ежы, сабе, дастатковая разнастайнасьць прадуктаў, задаволенасьць жыцьцём – усё гэта спрыяе большай сытасьці і зьніжае голад. Шукайце задавальненьне і задаволенасьць у ежы, насычаючы ня толькі цела, але й розум.
 
-Не хадзіце ў краму галоднымі.
+\subsection{Не хадзіце ў краму галоднымі.}
 Як паказваюць дасьледаваньні, галодныя людзі схільныя купляць больш калярыйныя і менш карысныя прадукты. Купляючы ці замаўляючы дастаўку ў інтэрнэце, уносьце карысныя прадукты ў абраныя сьпісы.
